@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1995, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1995, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,22 +31,21 @@ import org.jspecify.annotations.Nullable;
 /**
  * Thrown to indicate that an attempt has been made to store the
  * wrong type of object into an array of objects. For example, the
- * following code generates an <code>ArrayStoreException</code>:
+ * following code generates an {@code ArrayStoreException}:
  * <blockquote><pre>
  *     Object x[] = new String[3];
- *     x[0] = new Integer(0);
+ *     x[0] = Integer.valueOf(0);
  * </pre></blockquote>
  *
- * @author  unascribed
  * @since   1.0
  */
 @NullMarked
-public
-class ArrayStoreException extends RuntimeException {
+public class ArrayStoreException extends RuntimeException {
+    @java.io.Serial
     private static final long serialVersionUID = -4522193890499838241L;
 
     /**
-     * Constructs an <code>ArrayStoreException</code> with no detail message.
+     * Constructs an {@code ArrayStoreException} with no detail message.
      */
     
     public ArrayStoreException() {
@@ -54,7 +53,7 @@ class ArrayStoreException extends RuntimeException {
     }
 
     /**
-     * Constructs an <code>ArrayStoreException</code> with the specified
+     * Constructs an {@code ArrayStoreException} with the specified
      * detail message.
      *
      * @param   s   the detail message.
