@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,12 @@ import jdk.jshell.SourceCodeAnalysis.Suggestion;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InterruptedIOException;
+import java.io.OutputStream;
 import java.io.PrintStream;
+import java.io.Writer;
+import java.net.URI;
+import java.nio.charset.Charset;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -40,108 +45,192 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
+import javax.tools.DiagnosticListener;
+import javax.tools.JavaFileObject;
+import javax.tools.SimpleJavaFileObject;
 
 import jdk.internal.shellsupport.doc.JavadocFormatter;
-import jdk.internal.jline.NoInterruptUnixTerminal;
-import jdk.internal.jline.Terminal;
-import jdk.internal.jline.TerminalFactory;
-import jdk.internal.jline.TerminalSupport;
-import jdk.internal.jline.WindowsTerminal;
-import jdk.internal.jline.console.ConsoleReader;
-import jdk.internal.jline.console.KeyMap;
-import jdk.internal.jline.console.UserInterruptException;
-import jdk.internal.jline.console.history.History;
-import jdk.internal.jline.console.history.MemoryHistory;
-import jdk.internal.jline.extra.EditingHistory;
-import jdk.internal.jline.internal.NonBlockingInputStream;
 import jdk.internal.jshell.tool.StopDetectingInputStream.State;
 import jdk.internal.misc.Signal;
 import jdk.internal.misc.Signal.Handler;
+import jdk.internal.org.jline.keymap.KeyMap;
+import jdk.internal.org.jline.reader.Binding;
+import jdk.internal.org.jline.reader.EOFError;
+import jdk.internal.org.jline.reader.EndOfFileException;
+import jdk.internal.org.jline.reader.Highlighter;
+import jdk.internal.org.jline.reader.History;
+import jdk.internal.org.jline.reader.LineReader;
+import jdk.internal.org.jline.reader.LineReader.Option;
+import jdk.internal.org.jline.reader.Parser;
+import jdk.internal.org.jline.reader.UserInterruptException;
+import jdk.internal.org.jline.reader.Widget;
+import jdk.internal.org.jline.reader.impl.LineReaderImpl;
+import jdk.internal.org.jline.reader.impl.completer.ArgumentCompleter.ArgumentLine;
+import jdk.internal.org.jline.reader.impl.history.DefaultHistory;
+import jdk.internal.org.jline.terminal.impl.LineDisciplineTerminal;
+import jdk.internal.org.jline.terminal.Attributes;
+import jdk.internal.org.jline.terminal.Attributes.ControlChar;
+import jdk.internal.org.jline.terminal.Attributes.LocalFlag;
+import jdk.internal.org.jline.terminal.Size;
+import jdk.internal.org.jline.terminal.Terminal;
+import jdk.internal.org.jline.terminal.TerminalBuilder;
+import jdk.internal.org.jline.utils.AttributedString;
+import jdk.internal.org.jline.utils.AttributedStringBuilder;
+import jdk.internal.org.jline.utils.AttributedStyle;
+import jdk.internal.org.jline.utils.Display;
+import jdk.internal.org.jline.utils.NonBlocking;
+import jdk.internal.org.jline.utils.NonBlockingInputStreamImpl;
+import jdk.internal.org.jline.utils.NonBlockingReader;
+import jdk.internal.org.jline.utils.OSUtils;
 import jdk.jshell.ExpressionSnippet;
 import jdk.jshell.Snippet;
 import jdk.jshell.Snippet.SubKind;
+import jdk.jshell.SourceCodeAnalysis.Attribute;
 import jdk.jshell.SourceCodeAnalysis.CompletionInfo;
+import jdk.jshell.SourceCodeAnalysis.Highlight;
 import jdk.jshell.VarSnippet;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 class ConsoleIOContext extends IOContext {
 
     private static final String HISTORY_LINE_PREFIX = "HISTORY_LINE_";
 
+    private final ExecutorService backgroundWork = Executors.newFixedThreadPool(1);
+    final boolean allowIncompleteInputs;
     final JShellTool repl;
     final StopDetectingInputStream input;
-    final ConsoleReader in;
-    final EditingHistory history;
-    final MemoryHistory userInputHistory = new MemoryHistory();
+    final Attributes originalAttributes;
+    final LineReaderImpl in;
+    final History userInputHistory = new DefaultHistory();
+    final Instant historyLoad;
 
     String prefix = "";
 
-    ConsoleIOContext(JShellTool repl, InputStream cmdin, PrintStream cmdout) throws Exception {
+    ConsoleIOContext(JShellTool repl, InputStream cmdin, PrintStream cmdout,
+                     boolean interactive, Size size) throws Exception {
         this.repl = repl;
-        this.input = new StopDetectingInputStream(() -> repl.stop(), ex -> repl.hard("Error on input: %s", ex));
-        Terminal term;
-        if (System.getProperty("test.jdk") != null) {
-            term = new TestTerminal(input);
-        } else if (System.getProperty("os.name").toLowerCase(Locale.US).contains(TerminalFactory.WINDOWS)) {
-            term = new JShellWindowsTerminal(input);
-        } else {
-            term = new JShellUnixTerminal(input);
-        }
-        term.init();
-        CompletionState completionState = new CompletionState();
-        in = new ConsoleReader(cmdin, cmdout, term) {
-            @Override public KeyMap getKeys() {
-                return new CheckCompletionKeyMap(super.getKeys(), completionState);
-            }
+        Map<String, Object> variables = new HashMap<>();
+        this.input = new StopDetectingInputStream(() -> repl.stop(),
+                                                  ex -> repl.hard("Error on input: %s", ex));
+        InputStream nonBlockingInput = new NonBlockingInputStreamImpl(null, input) {
             @Override
-            protected boolean complete() throws IOException {
-                return ConsoleIOContext.this.complete(completionState);
+            public int readBuffered(byte[] b) throws IOException {
+                return input.read(b);
             }
         };
-        in.setExpandEvents(false);
-        in.setHandleUserInterrupt(true);
-        List<String> persistenHistory = Stream.of(repl.prefs.keys())
-                                              .filter(key -> key.startsWith(HISTORY_LINE_PREFIX))
-                                              .sorted()
-                                              .map(key -> repl.prefs.get(key))
-                                              .collect(Collectors.toList());
-        in.setHistory(history = new EditingHistory(in, persistenHistory) {
-            @Override protected boolean isComplete(CharSequence input) {
-                return repl.analysis.analyzeCompletion(input.toString()).completeness().isComplete();
-            }
-        });
-        in.setBellEnabled(true);
-        in.setCopyPasteDetection(true);
-        bind(FIXES_SHORTCUT, (Runnable) () -> fixes());
-        try {
-            Signal.handle(new Signal("CONT"), new Handler() {
-                @Override public void handle(Signal sig) {
-                    try {
-                        in.getTerminal().reset();
-                        in.redrawLine();
-                        in.flush();
-                    } catch (Exception ex) {
-                        ex.printStackTrace();
-                    }
+        Terminal terminal;
+        boolean allowIncompleteInputs = Boolean.getBoolean("jshell.test.allow.incomplete.inputs");
+        Consumer<LineReaderImpl> setupReader = r -> {};
+        boolean useComplexDeprecationHighlight = false;
+        if (cmdin != System.in) {
+            boolean enableHighlighter;
+            setupReader = r -> {};
+            if (System.getProperty("test.jdk") != null) {
+                terminal = new TestTerminal(nonBlockingInput, cmdout);
+                enableHighlighter = Boolean.getBoolean("test.enable.highlighter");
+            } else {
+                terminal = new ProgrammaticInTerminal(nonBlockingInput, cmdout, interactive,
+                                                      size);
+                if (!interactive) {
+                    setupReader = setupReader.andThen(r -> r.unsetOpt(Option.BRACKETED_PASTE));
+                    allowIncompleteInputs = true;
                 }
-            });
-        } catch (IllegalArgumentException ignored) {
-            //the CONT signal does not exist on this platform
+                enableHighlighter = interactive;
+            }
+            setupReader = setupReader.andThen(r -> r.option(Option.DISABLE_HIGHLIGHTER, !enableHighlighter));
+            input.setInputStream(cmdin);
+        } else {
+            //on platforms which are known to be fully supported by
+            //the FFMTerminalProvider, do not permit the ExecTerminalProvider:
+            boolean allowExecTerminal = !OSUtils.IS_WINDOWS &&
+                                        !OSUtils.IS_LINUX &&
+                                        !OSUtils.IS_OSX;
+            terminal = TerminalBuilder.builder().exec(allowExecTerminal).inputStreamWrapper(in -> {
+                input.setInputStream(in);
+                return nonBlockingInput;
+            }).nativeSignals(false).build();
+            useComplexDeprecationHighlight = !OSUtils.IS_WINDOWS;
         }
+        this.allowIncompleteInputs = allowIncompleteInputs;
+        originalAttributes = terminal.getAttributes();
+        Attributes noIntr = new Attributes(originalAttributes);
+        noIntr.setControlChar(ControlChar.VINTR, 0);
+        terminal.setAttributes(noIntr);
+        terminal.enterRawMode();
+        LineReaderImpl reader = new JShellLineReader(terminal, "jshell", variables);
+
+        setupReader.accept(reader);
+        reader.setOpt(Option.DISABLE_EVENT_EXPANSION);
+
+        reader.setParser((line, cursor, context) -> {
+            if (!ConsoleIOContext.this.allowIncompleteInputs && !repl.isComplete(line)) {
+                int pendingBraces = countPendingOpenBraces(line);
+                throw new EOFError(cursor, cursor, line, null, pendingBraces, null);
+            }
+            return new ArgumentLine(line, cursor);
+        });
+
+        reader.setHighlighter(new HighlighterImpl(useComplexDeprecationHighlight));
+        reader.getKeyMaps().get(LineReader.MAIN)
+              .bind((Widget) () -> fixes(), FIXES_SHORTCUT);
+        reader.getKeyMaps().get(LineReader.MAIN)
+              .bind((Widget) () -> { throw new UserInterruptException(""); }, "\003");
+
+        List<String> loadHistory = new ArrayList<>();
+        Stream.of(repl.prefs.keys())
+              .filter(key -> key.startsWith(HISTORY_LINE_PREFIX))
+              .sorted()
+              .map(key -> repl.prefs.get(key))
+              .forEach(loadHistory::add);
+
+        for (ListIterator<String> it = loadHistory.listIterator(); it.hasNext(); ) {
+            String current = it.next();
+
+            int trailingBackSlashes = countTrailintBackslashes(current);
+            boolean continuation = trailingBackSlashes % 2 != 0;
+            current = current.substring(0, current.length() - trailingBackSlashes / 2 - (continuation ? 1 : 0));
+            if (continuation && it.hasNext()) {
+                String next = it.next();
+                it.remove();
+                it.previous();
+                current += "\n" + next;
+            }
+
+            it.set(current);
+        }
+
+        historyLoad = Instant.MIN;
+        loadHistory.forEach(line -> reader.getHistory().add(historyLoad, line));
+
+        in = reader;
     }
 
     @Override
-    public String readLine(String prompt, String prefix) throws IOException, InputInterruptedException {
+    public String readLine(String firstLinePrompt, String continuationPrompt,
+                           boolean firstLine, String prefix) throws IOException, InputInterruptedException {
+        assert firstLine || allowIncompleteInputs;
         this.prefix = prefix;
         try {
-            return in.readLine(prompt);
+            in.setVariable(LineReader.SECONDARY_PROMPT_PATTERN, continuationPrompt);
+            return in.readLine(firstLine ? firstLinePrompt : continuationPrompt);
         } catch (UserInterruptException ex) {
             throw (InputInterruptedException) new InputInterruptedException().initCause(ex);
+        } catch (EndOfFileException ex) {
+            return null;
         }
     }
 
@@ -152,7 +241,10 @@ class ConsoleIOContext extends IOContext {
 
     @Override
     public Iterable<String> history(boolean currentSession) {
-        return history.entries(currentSession);
+        return StreamSupport.stream(getHistory().spliterator(), false)
+                            .filter(entry -> !currentSession || !historyLoad.equals(entry.time()))
+                            .map(History.Entry::line)
+                            .toList();
     }
 
     @Override
@@ -163,7 +255,11 @@ class ConsoleIOContext extends IOContext {
                 repl.prefs.remove(key);
             }
         }
-        Collection<? extends String> savedHistory = history.save();
+        Collection<String> savedHistory =
+            StreamSupport.stream(in.getHistory().spliterator(), false)
+                         .map(History.Entry::line)
+                         .flatMap(this::toSplitEntries)
+                         .toList();
         if (!savedHistory.isEmpty()) {
             int len = (int) Math.ceil(Math.log10(savedHistory.size()+1));
             String format = HISTORY_LINE_PREFIX + "%0" + len + "d";
@@ -173,25 +269,52 @@ class ConsoleIOContext extends IOContext {
             }
         }
         repl.prefs.flush();
-        in.close();
         try {
-            in.getTerminal().restore();
+            in.getTerminal().setAttributes(originalAttributes);
+            in.getTerminal().close();
         } catch (Exception ex) {
             throw new IOException(ex);
         }
         input.shutdown();
+        backgroundWork.shutdown();
     }
 
-    private void bind(String shortcut, Object action) {
-        KeyMap km = in.getKeys();
-        for (int i = 0; i < shortcut.length(); i++) {
-            Object value = km.getBound(Character.toString(shortcut.charAt(i)));
-            if (value instanceof KeyMap) {
-                km = (KeyMap) value;
+    private Stream<String> toSplitEntries(String entry) {
+        String[] lines = entry.split("\n");
+        List<String> result = new ArrayList<>();
+
+        for (int i = 0; i < lines.length; i++) {
+            StringBuilder historyLine = new StringBuilder(lines[i]);
+            int trailingBackSlashes = countTrailintBackslashes(historyLine);
+            for (int j = 0; j < trailingBackSlashes; j++) {
+                historyLine.append("\\");
+            }
+            if (i + 1 < lines.length) {
+                historyLine.append("\\");
+            }
+            result.add(historyLine.toString());
+        }
+
+        return result.stream();
+    }
+
+    private int countTrailintBackslashes(CharSequence text) {
+        int count = 0;
+
+        for (int i = text.length() - 1; i >= 0; i--) {
+            if (text.charAt(i) == '\\') {
+                count++;
             } else {
-                km.bind(shortcut.substring(i), action);
+                break;
             }
         }
+
+        return count;
+    }
+
+    @Override
+    public void setIndent(int indent) {
+        in.variable(LineReader.INDENTATION, indent);
     }
 
     private static final String FIXES_SHORTCUT = "\033\133\132"; //Shift-TAB
@@ -199,6 +322,7 @@ class ConsoleIOContext extends IOContext {
     private static final String LINE_SEPARATOR = System.getProperty("line.separator");
     private static final String LINE_SEPARATORS2 = LINE_SEPARATOR + LINE_SEPARATOR;
 
+    /*XXX:*/private static final int AUTOPRINT_THRESHOLD = 100;
     @SuppressWarnings("fallthrough")
     private boolean complete(CompletionState completionState) {
         //The completion has multiple states (invoked by subsequent presses of <tab>).
@@ -206,8 +330,8 @@ class ConsoleIOContext extends IOContext {
         //and placed into the todo list (completionState.todo). The todo list is
         //then followed on both the first and subsequent completion invocations:
         try {
-            String text = in.getCursorBuffer().toString();
-            int cursor = in.getCursorBuffer().cursor;
+            String text = in.getBuffer().toString();
+            int cursor = in.getBuffer().cursor();
 
             List<CompletionTask> todo = completionState.todo;
 
@@ -227,21 +351,59 @@ class ConsoleIOContext extends IOContext {
                     doc = repl.analysis.documentation(prefix + text, cursor + prefix.length(), false)
                                        .stream()
                                        .map(Documentation::signature)
-                                       .collect(Collectors.toList());
+                                       .toList();
                 }
                 long smartCount = suggestions.stream().filter(Suggestion::matchesType).count();
-                boolean hasSmart = smartCount > 0 && smartCount <= in.getAutoprintThreshold();
+                boolean hasSmart = smartCount > 0 && smartCount <= /*in.getAutoprintThreshold()*/AUTOPRINT_THRESHOLD;
                 boolean hasBoth = hasSmart &&
                                   suggestions.stream()
                                              .map(s -> s.matchesType())
                                              .distinct()
                                              .count() == 2;
-                boolean tooManyItems = suggestions.size() > in.getAutoprintThreshold();
-                CompletionTask ordinaryCompletion =
-                        new OrdinaryCompletionTask(suggestions,
-                                                   anchor[0],
-                                                   !command && !doc.isEmpty(),
-                                                   hasBoth);
+                boolean tooManyItems = suggestions.size() > /*in.getAutoprintThreshold()*/AUTOPRINT_THRESHOLD;
+                CompletionTask ordinaryCompletion;
+                List<? extends CharSequence> ordinaryCompletionToShow;
+
+                if (hasBoth) {
+                    ordinaryCompletionToShow =
+                        suggestions.stream()
+                                   .filter(Suggestion::matchesType)
+                                   .map(Suggestion::continuation)
+                                   .distinct()
+                                   .toList();
+                } else {
+                    ordinaryCompletionToShow =
+                        suggestions.stream()
+                                   .map(Suggestion::continuation)
+                                   .distinct()
+                                   .toList();
+                }
+
+                if (ordinaryCompletionToShow.isEmpty()) {
+                    ordinaryCompletion = new ContinueCompletionTask();
+                } else {
+                    Optional<String> prefixOpt =
+                            suggestions.stream()
+                                       .map(Suggestion::continuation)
+                                       .reduce(ConsoleIOContext::commonPrefix);
+
+                    String prefix =
+                            prefixOpt.orElse("").substring(cursor - anchor[0]);
+
+                    if (!prefix.isEmpty() && !command) {
+                        //the completion will fill in the prefix, which will invalidate
+                        //the documentation, avoid adding documentation tasks into the
+                        //todo list:
+                        doc = List.of();
+                    }
+
+                    ordinaryCompletion =
+                            new OrdinaryCompletionTask(ordinaryCompletionToShow,
+                                                       prefix,
+                                                       !command && !doc.isEmpty(),
+                                                       hasBoth);
+                }
+
                 CompletionTask allCompletion = new AllSuggestionsCompletionTask(suggestions, anchor[0]);
 
                 todo = new ArrayList<>();
@@ -312,8 +474,8 @@ class ConsoleIOContext extends IOContext {
                         //intentional fall-through
                     case NO_DATA:
                         if (!todo.isEmpty()) {
-                            in.println();
-                            in.println(todo.get(0).description());
+                            in.getTerminal().writer().println();
+                            in.getTerminal().writer().println(todo.get(0).description());
                         }
                         break OUTER;
                 }
@@ -363,9 +525,9 @@ class ConsoleIOContext extends IOContext {
 
                         @Override
                         public Result perform(String text, int cursor) throws IOException {
-                            in.println();
+                            in.getTerminal().writer().println();
                             for (String line : thisPageLines) {
-                                in.println(line);
+                                in.getTerminal().writer().println(line);
                             }
                             return Result.FINISH;
                         }
@@ -431,26 +593,26 @@ class ConsoleIOContext extends IOContext {
 
         @Override
         public Result perform(String text, int cursor) throws IOException {
-            in.println();
-            in.println(repl.getResourceString("jshell.console.no.such.command"));
-            in.println();
+            in.getTerminal().writer().println();
+            in.getTerminal().writer().println(repl.getResourceString("jshell.console.no.such.command"));
+            in.getTerminal().writer().println();
             return Result.SKIP;
         }
 
     }
 
     private final class OrdinaryCompletionTask implements CompletionTask {
-        private final List<Suggestion> suggestions;
-        private final int anchor;
+        private final List<? extends CharSequence> toShow;
+        private final String prefix;
         private final boolean cont;
         private final boolean showSmart;
 
-        public OrdinaryCompletionTask(List<Suggestion> suggestions,
-                                      int anchor,
+        public OrdinaryCompletionTask(List<? extends CharSequence> toShow,
+                                      String prefix,
                                       boolean cont,
                                       boolean showSmart) {
-            this.suggestions = suggestions;
-            this.anchor = anchor;
+            this.toShow = toShow;
+            this.prefix = prefix;
             this.cont = cont;
             this.showSmart = showSmart;
         }
@@ -462,43 +624,16 @@ class ConsoleIOContext extends IOContext {
 
         @Override
         public Result perform(String text, int cursor) throws IOException {
-            List<CharSequence> toShow;
-
-            if (showSmart) {
-                toShow =
-                    suggestions.stream()
-                               .filter(Suggestion::matchesType)
-                               .map(Suggestion::continuation)
-                               .distinct()
-                               .collect(Collectors.toList());
-            } else {
-                toShow =
-                    suggestions.stream()
-                               .map(Suggestion::continuation)
-                               .distinct()
-                               .collect(Collectors.toList());
-            }
-
-            if (toShow.isEmpty()) {
-                return Result.CONTINUE;
-            }
-
-            Optional<String> prefix =
-                    suggestions.stream()
-                               .map(Suggestion::continuation)
-                               .reduce(ConsoleIOContext::commonPrefix);
-
-            String prefixStr = prefix.orElse("").substring(cursor - anchor);
-            in.putString(prefixStr);
+            in.putString(prefix);
 
             boolean showItems = toShow.size() > 1 || showSmart;
 
             if (showItems) {
-                in.println();
-                in.printColumns(toShow);
+                in.getTerminal().writer().println();
+                printColumns(toShow);
             }
 
-            if (!prefixStr.isEmpty())
+            if (!prefix.isEmpty())
                 return showItems ? Result.FINISH : Result.SKIP_NOREPAINT;
 
             return cont ? Result.CONTINUE : Result.FINISH;
@@ -518,7 +653,7 @@ class ConsoleIOContext extends IOContext {
 
         @Override
         public String description() {
-            if (suggestions.size() <= in.getAutoprintThreshold()) {
+            if (suggestions.size() <= /*in.getAutoprintThreshold()*/AUTOPRINT_THRESHOLD) {
                 return repl.getResourceString("jshell.console.completion.all.completions");
             } else {
                 return repl.messageFormat("jshell.console.completion.all.completions.number", suggestions.size());
@@ -531,7 +666,7 @@ class ConsoleIOContext extends IOContext {
                     suggestions.stream()
                                .map(Suggestion::continuation)
                                .distinct()
-                               .collect(Collectors.toList());
+                               .toList();
 
             Optional<String> prefix =
                     candidates.stream()
@@ -540,12 +675,32 @@ class ConsoleIOContext extends IOContext {
             String prefixStr = prefix.map(str -> str.substring(cursor - anchor)).orElse("");
             in.putString(prefixStr);
             if (candidates.size() > 1) {
-                in.println();
-                in.printColumns(candidates);
+                in.getTerminal().writer().println();
+                printColumns(candidates);
             }
             return suggestions.isEmpty() ? Result.NO_DATA : Result.FINISH;
         }
 
+    }
+
+    private void printColumns(List<? extends CharSequence> candidates) {
+        if (candidates.isEmpty()) return ;
+        int size = candidates.stream().mapToInt(CharSequence::length).max().getAsInt() + 3;
+        int columns = in.getTerminal().getWidth() / size;
+        int c = 0;
+        for (CharSequence cand : candidates) {
+            in.getTerminal().writer().print(cand);
+            for (int s = cand.length(); s < size; s++) {
+                in.getTerminal().writer().print(" ");
+            }
+            if (++c == columns) {
+                in.getTerminal().writer().println();
+                c = 0;
+            }
+        }
+        if (c != 0) {
+            in.getTerminal().writer().println();
+        }
     }
 
     private final class CommandSynopsisTask implements CompletionTask {
@@ -563,14 +718,14 @@ class ConsoleIOContext extends IOContext {
 
         @Override
         public Result perform(String text, int cursor) throws IOException {
-            try {
-                in.println();
-                in.println(synopsis.stream()
+//            try {
+                in.getTerminal().writer().println();
+                in.getTerminal().writer().println(synopsis.stream()
                                    .map(l -> l.replaceAll("\n", LINE_SEPARATOR))
                                    .collect(Collectors.joining(LINE_SEPARATORS2)));
-            } catch (IOException ex) {
-                throw new IllegalStateException(ex);
-            }
+//            } catch (IOException ex) {
+//                throw new IllegalStateException(ex);
+//            }
             return Result.FINISH;
         }
 
@@ -612,9 +767,9 @@ class ConsoleIOContext extends IOContext {
 
         @Override
         public Result perform(String text, int cursor) throws IOException {
-            in.println();
-            in.println(repl.getResourceString("jshell.console.completion.current.signatures"));
-            in.println(doc.stream().collect(Collectors.joining(LINE_SEPARATOR)));
+            in.getTerminal().writer().println();
+            in.getTerminal().writer().println(repl.getResourceString("jshell.console.completion.current.signatures"));
+            in.getTerminal().writer().println(doc.stream().collect(Collectors.joining(LINE_SEPARATOR)));
             return Result.FINISH;
         }
 
@@ -638,45 +793,51 @@ class ConsoleIOContext extends IOContext {
             //schedule showing javadoc:
             Terminal term = in.getTerminal();
             JavadocFormatter formatter = new JavadocFormatter(term.getWidth(),
-                                                              term.isAnsiSupported());
+                                                              true);
             Function<Documentation, String> convertor = d -> formatter.formatJavadoc(d.signature(), d.javadoc()) +
                              (d.javadoc() == null ? repl.messageFormat("jshell.console.no.javadoc")
                                                   : "");
             List<String> doc = repl.analysis.documentation(prefix + text, cursor + prefix.length(), true)
                                             .stream()
                                             .map(convertor)
-                                            .collect(Collectors.toList());
+                                            .toList();
             return doPrintFullDocumentation(todo, doc, false);
         }
 
     }
 
+    private static class ContinueCompletionTask implements ConsoleIOContext.CompletionTask {
+
+        @Override
+        public String description() {
+            throw new UnsupportedOperationException("Should not get here.");
+        }
+
+        @Override
+        public CompletionTask.Result perform(String text, int cursor) throws IOException {
+            return CompletionTask.Result.CONTINUE;
+        }
+    }
+
     @Override
     public boolean terminalEditorRunning() {
         Terminal terminal = in.getTerminal();
-        if (terminal instanceof SuspendableTerminal)
-            return ((SuspendableTerminal) terminal).isRaw();
-        return false;
+        return !terminal.getAttributes().getLocalFlag(LocalFlag.ICANON);
     }
 
     @Override
     public void suspend() {
-        Terminal terminal = in.getTerminal();
-        if (terminal instanceof SuspendableTerminal)
-            ((SuspendableTerminal) terminal).suspend();
     }
 
     @Override
     public void resume() {
-        Terminal terminal = in.getTerminal();
-        if (terminal instanceof SuspendableTerminal)
-            ((SuspendableTerminal) terminal).resume();
     }
 
     @Override
     public void beforeUserCode() {
         synchronized (this) {
-            inputBytes = null;
+            pendingBytes = null;
+            pendingLine = null;
         }
         input.setState(State.BUFFER);
     }
@@ -688,49 +849,52 @@ class ConsoleIOContext extends IOContext {
 
     @Override
     public void replaceLastHistoryEntry(String source) {
-        history.fullHistoryReplace(source);
+        var it = in.getHistory().iterator();
+        while (it.hasNext()) {
+            it.next();
+        }
+        it.remove();
+        in.getHistory().add(source);
+        in.getHistory().resetIndex();
     }
 
     private static final long ESCAPE_TIMEOUT = 100;
 
-    private void fixes() {
+    private boolean fixes() {
         try {
-            int c = in.readCharacter();
+            int c = in.getTerminal().reader().read();
 
             if (c == (-1)) {
-                return ;
+                return true; //TODO: true or false???
             }
 
             for (FixComputer computer : FIX_COMPUTERS) {
                 if (computer.shortcut == c) {
                     fixes(computer);
-                    return ;
+                    return true; //TODO: true of false???
                 }
             }
 
             readOutRemainingEscape(c);
 
             in.beep();
-            in.println();
-            in.println(repl.getResourceString("jshell.fix.wrong.shortcut"));
+            in.getTerminal().writer().println();
+            in.getTerminal().writer().println(repl.getResourceString("jshell.fix.wrong.shortcut"));
             in.redrawLine();
             in.flush();
         } catch (IOException ex) {
             ex.printStackTrace();
         }
+        return true;
     }
 
     private void readOutRemainingEscape(int c) throws IOException {
         if (c == '\033') {
             //escape, consume waiting input:
-            InputStream inp = in.getInput();
+            NonBlockingReader inp = in.getTerminal().reader();
 
-            if (inp instanceof NonBlockingInputStream) {
-                NonBlockingInputStream nbis = (NonBlockingInputStream) inp;
-
-                while (nbis.isNonBlockingEnabled() && nbis.peek(ESCAPE_TIMEOUT) > 0) {
-                    in.readCharacter();
-                }
+            while (inp.peek(ESCAPE_TIMEOUT) > 0) {
+                inp.read();
             }
         }
     }
@@ -738,14 +902,14 @@ class ConsoleIOContext extends IOContext {
     //compute possible options/Fixes based on the selected FixComputer, present them to the user,
     //and perform the selected one:
     private void fixes(FixComputer computer) {
-        String input = prefix + in.getCursorBuffer().toString();
-        int cursor = prefix.length() + in.getCursorBuffer().cursor;
+        String input = prefix + in.getBuffer().toString();
+        int cursor = prefix.length() + in.getBuffer().cursor();
         FixResult candidates = computer.compute(repl, input, cursor);
 
         try {
             final boolean printError = candidates.error != null && !candidates.error.isEmpty();
             if (printError) {
-                in.println(candidates.error);
+                in.getTerminal().writer().println(candidates.error);
             }
             if (candidates.fixes.isEmpty()) {
                 in.beep();
@@ -768,19 +932,19 @@ class ConsoleIOContext extends IOContext {
                     }
 
                     @Override
-                    public void perform(ConsoleReader in) throws IOException {
+                    public void perform(LineReaderImpl in) throws IOException {
                         in.redrawLine();
                     }
                 });
 
                 Map<Character, Fix> char2Fix = new HashMap<>();
-                in.println();
+                in.getTerminal().writer().println();
                 for (int i = 0; i < fixes.size(); i++) {
                     Fix fix = fixes.get(i);
                     char2Fix.put((char) ('0' + i), fix);
-                    in.println("" + i + ": " + fixes.get(i).displayName());
+                    in.getTerminal().writer().println("" + i + ": " + fixes.get(i).displayName());
                 }
-                in.print(repl.messageFormat("jshell.console.choice"));
+                in.getTerminal().writer().print(repl.messageFormat("jshell.console.choice"));
                 in.flush();
                 int read;
 
@@ -793,7 +957,7 @@ class ConsoleIOContext extends IOContext {
                     fix = fixes.get(0);
                 }
 
-                in.println();
+                in.getTerminal().writer().println();
 
                 fix.perform(in);
 
@@ -804,30 +968,101 @@ class ConsoleIOContext extends IOContext {
         }
     }
 
-    private byte[] inputBytes;
-    private int inputBytesPointer;
+    private String pendingLine;
+    private int pendingLinePointer;
+    private byte[] pendingBytes;
+    private int pendingBytesPointer;
 
     @Override
     public synchronized int readUserInput() throws IOException {
-        while (inputBytes == null || inputBytes.length <= inputBytesPointer) {
-            boolean prevHandleUserInterrupt = in.getHandleUserInterrupt();
-            History prevHistory = in.getHistory();
-
-            try {
-                input.setState(State.WAIT);
-                in.setHandleUserInterrupt(true);
-                in.setHistory(userInputHistory);
-                inputBytes = (in.readLine("") + System.getProperty("line.separator")).getBytes();
-                inputBytesPointer = 0;
-            } catch (UserInterruptException ex) {
-                throw new InterruptedIOException();
-            } finally {
-                in.setHistory(prevHistory);
-                in.setHandleUserInterrupt(prevHandleUserInterrupt);
-                input.setState(State.BUFFER);
-            }
+        if (pendingBytes == null || pendingBytes.length <= pendingBytesPointer) {
+            char userChar = readUserInputChar();
+            pendingBytes = String.valueOf(userChar).getBytes();
+            pendingBytesPointer = 0;
         }
-        return inputBytes[inputBytesPointer++];
+        return pendingBytes[pendingBytesPointer++];
+    }
+
+    @Override
+    public synchronized char readUserInputChar() throws IOException {
+        while (pendingLine == null || pendingLine.length() <= pendingLinePointer) {
+            pendingLine = doReadUserLine("", null) + System.getProperty("line.separator");
+            pendingLinePointer = 0;
+        }
+        return pendingLine.charAt(pendingLinePointer++);
+    }
+
+    @Override
+    public synchronized String readUserLine(String prompt) throws IOException {
+        //TODO: correct behavior w.r.t. pre-read stuff?
+        if (pendingLine != null && pendingLine.length() > pendingLinePointer) {
+            return pendingLine.substring(pendingLinePointer);
+        }
+        return doReadUserLine(prompt, null);
+    }
+
+    private synchronized String doReadUserLine(String prompt, Character mask) throws IOException {
+        History prevHistory = in.getHistory();
+        boolean prevDisableCr = Display.DISABLE_CR;
+        Parser prevParser = in.getParser();
+
+        try {
+            in.setParser((line, cursor, context) -> new ArgumentLine(line, cursor));
+            input.setState(State.WAIT);
+            Display.DISABLE_CR = true;
+            in.setHistory(userInputHistory);
+            return in.readLine(prompt.replace("%", "%%"), mask);
+        } catch (UserInterruptException ex) {
+            throw new InterruptedIOException();
+        } finally {
+            in.setParser(prevParser);
+            in.setHistory(prevHistory);
+            input.setState(State.BUFFER);
+            Display.DISABLE_CR = prevDisableCr;
+        }
+    }
+
+    public char[] readPassword(String prompt) throws IOException {
+        //TODO: correct behavior w.r.t. pre-read stuff?
+        return doReadUserLine(prompt, '\0').toCharArray();
+    }
+
+    @Override
+    public Charset charset() {
+        return in.getTerminal().encoding();
+    }
+
+    @Override
+    public Writer userOutput() {
+        return in.getTerminal().writer();
+    }
+
+    private int countPendingOpenBraces(String code) {
+        int pendingBraces = 0;
+        com.sun.tools.javac.util.Context ctx =
+                new com.sun.tools.javac.util.Context();
+        SimpleJavaFileObject source = new SimpleJavaFileObject(URI.create("mem://snippet"),
+                                                               JavaFileObject.Kind.SOURCE) {
+            @Override
+            public CharSequence getCharContent(boolean ignoreEncodingErrors) throws IOException {
+                return code;
+            }
+        };
+        ctx.put(DiagnosticListener.class, d -> {});
+        com.sun.tools.javac.util.Log.instance(ctx).useSource(source);
+        com.sun.tools.javac.parser.ScannerFactory scannerFactory =
+                com.sun.tools.javac.parser.ScannerFactory.instance(ctx);
+        com.sun.tools.javac.parser.Scanner scanner =
+                scannerFactory.newScanner(code, false);
+
+        while (true) {
+            switch (scanner.token().kind) {
+                case LBRACE: pendingBraces++; break;
+                case RBRACE: pendingBraces--; break;
+                case EOF: return pendingBraces;
+            }
+            scanner.nextToken();
+        }
     }
 
     /**
@@ -841,7 +1076,7 @@ class ConsoleIOContext extends IOContext {
         /**
          * Perform the given action.
          */
-        public void perform(ConsoleReader in) throws IOException;
+        public void perform(LineReaderImpl in) throws IOException;
     }
 
     /**
@@ -882,11 +1117,11 @@ class ConsoleIOContext extends IOContext {
 
     private static final FixComputer[] FIX_COMPUTERS = new FixComputer[] {
         new FixComputer('v', false) { //compute "Introduce variable" Fix:
-            private void performToVar(ConsoleReader in, String type) throws IOException {
+            private void performToVar(LineReaderImpl in, String type) throws IOException {
                 in.redrawLine();
-                in.setCursorPosition(0);
+                in.getBuffer().cursor(0);
                 in.putString(type + "  = ");
-                in.setCursorPosition(in.getCursorBuffer().cursor - 3);
+                in.getBuffer().cursor(in.getBuffer().cursor() - 3);
                 in.flush();
             }
 
@@ -904,7 +1139,7 @@ class ConsoleIOContext extends IOContext {
                     }
 
                     @Override
-                    public void perform(ConsoleReader in) throws IOException {
+                    public void perform(LineReaderImpl in) throws IOException {
                         performToVar(in, type);
                     }
                 });
@@ -922,9 +1157,9 @@ class ConsoleIOContext extends IOContext {
                             }
 
                             @Override
-                            public void perform(ConsoleReader in) throws IOException {
+                            public void perform(LineReaderImpl in) throws IOException {
                                 repl.processSource("import " + type + ";");
-                                in.println("Imported: " + type);
+                                in.getTerminal().writer().println("Imported: " + type);
                                 performToVar(in, stype);
                             }
                         });
@@ -934,19 +1169,19 @@ class ConsoleIOContext extends IOContext {
             }
         },
         new FixComputer('m', false) { //compute "Introduce method" Fix:
-            private void performToMethod(ConsoleReader in, String type, String code) throws IOException {
+            private void performToMethod(LineReaderImpl in, String type, String code) throws IOException {
                 in.redrawLine();
                 if (!code.trim().endsWith(";")) {
                     in.putString(";");
                 }
                 in.putString(" }");
-                in.setCursorPosition(0);
+                in.getBuffer().cursor(0);
                 String afterCursor = type.equals("void")
                         ? "() { "
                         : "() { return ";
                 in.putString(type + " " + afterCursor);
                 // position the cursor where the method name should be entered (before parens)
-                in.setCursorPosition(in.getCursorBuffer().cursor - afterCursor.length());
+                in.getBuffer().cursor(in.getBuffer().cursor() - afterCursor.length());
                 in.flush();
             }
 
@@ -1009,7 +1244,7 @@ class ConsoleIOContext extends IOContext {
                     }
 
                     @Override
-                    public void perform(ConsoleReader in) throws IOException {
+                    public void perform(LineReaderImpl in) throws IOException {
                         performToMethod(in, type, codeToCursor);
                     }
                 });
@@ -1027,9 +1262,9 @@ class ConsoleIOContext extends IOContext {
                             }
 
                             @Override
-                            public void perform(ConsoleReader in) throws IOException {
+                            public void perform(LineReaderImpl in) throws IOException {
                                 repl.processSource("import " + type + ";");
-                                in.println("Imported: " + type);
+                                in.getTerminal().writer().println("Imported: " + type);
                                 performToMethod(in, stype, codeToCursor);
                             }
                         });
@@ -1051,9 +1286,9 @@ class ConsoleIOContext extends IOContext {
                         }
 
                         @Override
-                        public void perform(ConsoleReader in) throws IOException {
+                        public void perform(LineReaderImpl in) throws IOException {
                             repl.processSource("import " + fqn + ";");
-                            in.println("Imported: " + fqn);
+                            in.getTerminal().writer().println("Imported: " + fqn);
                             in.redrawLine();
                         }
                     });
@@ -1075,189 +1310,74 @@ class ConsoleIOContext extends IOContext {
         }
     };
 
-    private static final class JShellUnixTerminal extends NoInterruptUnixTerminal implements SuspendableTerminal {
-
-        private final StopDetectingInputStream input;
-
-        public JShellUnixTerminal(StopDetectingInputStream input) throws Exception {
-            this.input = input;
-        }
-
-        @Override
-        public boolean isRaw() {
-            try {
-                return getSettings().get("-a").contains("-icanon");
-            } catch (IOException | InterruptedException ex) {
-                return false;
-            }
-        }
-
-        @Override
-        public InputStream wrapInIfNeeded(InputStream in) throws IOException {
-            return input.setInputStream(super.wrapInIfNeeded(in));
-        }
-
-        @Override
-        public void disableInterruptCharacter() {
-        }
-
-        @Override
-        public void enableInterruptCharacter() {
-        }
-
-        @Override
-        public void suspend() {
-            try {
-                getSettings().restore();
-                super.disableInterruptCharacter();
-            } catch (Exception ex) {
-                throw new IllegalStateException(ex);
-            }
-        }
-
-        @Override
-        public void resume() {
-            try {
-                init();
-            } catch (Exception ex) {
-                throw new IllegalStateException(ex);
-            }
-        }
-
+    private History getHistory() {
+        return in.getHistory();
     }
 
-    private static final class JShellWindowsTerminal extends WindowsTerminal implements SuspendableTerminal {
+    private static class ProgrammaticInTerminal extends LineDisciplineTerminal {
 
-        private final StopDetectingInputStream input;
+        protected static final int DEFAULT_WIDTH = 80;
+        protected static final int DEFAULT_HEIGHT = 24;
 
-        public JShellWindowsTerminal(StopDetectingInputStream input) throws Exception {
-            this.input = input;
+        private final NonBlockingReader inputReader;
+        private final Size bufferSize;
+
+        public ProgrammaticInTerminal(InputStream input, OutputStream output,
+                                       boolean interactive, Size size) throws Exception {
+            this(input, output, interactive ? "ansi" : "dumb",
+                 size != null ? size : new Size(DEFAULT_WIDTH, DEFAULT_HEIGHT),
+                 size != null ? size
+                              : interactive ? new Size(DEFAULT_WIDTH, DEFAULT_HEIGHT)
+                                            : new Size(Integer.MAX_VALUE - 1, DEFAULT_HEIGHT));
+        }
+
+        protected ProgrammaticInTerminal(InputStream input, OutputStream output,
+                                         String terminal, Size size, Size bufferSize) throws Exception {
+            super("non-system-in", terminal, output, UTF_8);
+            this.inputReader = NonBlocking.nonBlocking(getName(), input, encoding());
+            Attributes a = new Attributes(getAttributes());
+            a.setLocalFlag(LocalFlag.ECHO, false);
+            setAttributes(attributes);
+            setSize(size);
+            this.bufferSize = bufferSize;
         }
 
         @Override
-        public void init() throws Exception {
-            super.init();
-            setAnsiSupported(false);
+        public NonBlockingReader reader() {
+            return inputReader;
         }
 
         @Override
-        public InputStream wrapInIfNeeded(InputStream in) throws IOException {
-            return input.setInputStream(super.wrapInIfNeeded(in));
+        protected void doClose() throws IOException {
+            super.doClose();
+            slaveInput.close();
+            inputReader.close();
         }
 
         @Override
-        public void suspend() {
-            try {
-                restore();
-                setConsoleMode(getConsoleMode() & ~ConsoleMode.ENABLE_PROCESSED_INPUT.code);
-            } catch (Exception ex) {
-                throw new IllegalStateException(ex);
-            }
+        public Size getBufferSize() {
+            return bufferSize;
         }
-
-        @Override
-        public void resume() {
-            try {
-                restore();
-                init();
-            } catch (Exception ex) {
-                throw new IllegalStateException(ex);
-            }
-        }
-
-        @Override
-        public boolean isRaw() {
-            return (getConsoleMode() & ConsoleMode.ENABLE_LINE_INPUT.code) == 0;
-        }
-
     }
 
-    private static final class TestTerminal extends TerminalSupport {
-
-        private final StopDetectingInputStream input;
-        private final int height;
-
-        public TestTerminal(StopDetectingInputStream input) throws Exception {
-            super(true);
-            setAnsiSupported(true);
-            setEchoEnabled(false);
-            this.input = input;
+    private static final class TestTerminal extends ProgrammaticInTerminal {
+        private static Size computeSize() {
             int h = DEFAULT_HEIGHT;
             try {
                 String hp = System.getProperty("test.terminal.height");
-                if (hp != null && !hp.isEmpty()) {
+                if (hp != null && !hp.isEmpty() && System.getProperty("test.jdk") != null) {
                     h = Integer.parseInt(hp);
                 }
             } catch (Throwable ex) {
                 // ignore
             }
-            this.height = h;
+            return new Size(DEFAULT_WIDTH, h);
         }
-
-        @Override
-        public InputStream wrapInIfNeeded(InputStream in) throws IOException {
-            return input.setInputStream(super.wrapInIfNeeded(in));
+        public TestTerminal(InputStream input, OutputStream output) throws Exception {
+            this(input, output, computeSize());
         }
-
-        @Override
-        public int getHeight() {
-            return height;
-        }
-
-    }
-
-    private interface SuspendableTerminal {
-        public void suspend();
-        public void resume();
-        public boolean isRaw();
-    }
-
-    private static final class CheckCompletionKeyMap extends KeyMap {
-
-        private final KeyMap del;
-        private final CompletionState completionState;
-
-        public CheckCompletionKeyMap(KeyMap del, CompletionState completionState) {
-            super(del.getName());
-            this.del = del;
-            this.completionState = completionState;
-        }
-
-        @Override
-        public void bind(CharSequence keySeq, Object function) {
-            del.bind(keySeq, function);
-        }
-
-        @Override
-        public void bindIfNotBound(CharSequence keySeq, Object function) {
-            del.bindIfNotBound(keySeq, function);
-        }
-
-        @Override
-        public void from(KeyMap other) {
-            del.from(other);
-        }
-
-        @Override
-        public Object getAnotherKey() {
-            return del.getAnotherKey();
-        }
-
-        @Override
-        public Object getBound(CharSequence keySeq) {
-            this.completionState.actionCount++;
-
-            return del.getBound(keySeq);
-        }
-
-        @Override
-        public void setBlinkMatchingParen(boolean on) {
-            del.setBlinkMatchingParen(on);
-        }
-
-        @Override
-        public String toString() {
-            return "check: " + del.toString();
+        private TestTerminal(InputStream input, OutputStream output, Size size) throws Exception {
+            super(input, output, "ansi", size, size);
         }
     }
 
@@ -1267,5 +1387,151 @@ class ConsoleIOContext extends IOContext {
         public int actionCount;
         /**Precomputed completion actions. Should only be reused if actionCount == 1.*/
         public List<CompletionTask> todo = Collections.emptyList();
+    }
+
+    private class HighlighterImpl implements Highlighter {
+
+        private final boolean useComplexDeprecationHighlight;
+        private List<UIHighlight> highlights;
+        private String prevBuffer;
+
+        public HighlighterImpl(boolean useComplexDeprecationHighlight) {
+            this.useComplexDeprecationHighlight = useComplexDeprecationHighlight;
+        }
+
+        @Override
+        public AttributedString highlight(LineReader reader, String buffer) {
+            AttributedStringBuilder builder = new AttributedStringBuilder();
+            List<UIHighlight> highlights;
+            synchronized (this) {
+                highlights = this.highlights;
+            }
+            int idx = 0;
+            if (highlights != null) {
+                for (UIHighlight h : highlights) {
+                    if (h.end <= buffer.length() && h.content.equals(buffer.substring(h.start, h.end))) {
+                        builder.append(buffer.substring(idx, h.start));
+                        builder.append(buffer.substring(h.start, h.end), h.style);
+                        idx = h.end;
+                    }
+                }
+            }
+            builder.append(buffer.substring(idx, buffer.length()));
+            synchronized (this) {
+                if (!buffer.equals(prevBuffer)) {
+                    prevBuffer = buffer;
+                    backgroundWork.submit(() -> {
+                        synchronized (HighlighterImpl.this) {
+                            if (!buffer.equals(prevBuffer)) {
+                                return ;
+                            }
+                        }
+                        List<UIHighlight> computedHighlights = new ArrayList<>();
+                        for (Highlight h : repl.analysis.highlights(buffer)) {
+                            computedHighlights.add(new UIHighlight(h.start(), h.end(), buffer.substring(h.start(), h.end()), toAttributedStyle(h.attributes())));
+                        }
+                        synchronized (HighlighterImpl.this) {
+                            if (buffer.equals(prevBuffer)) {
+                                HighlighterImpl.this.highlights = computedHighlights;
+                            }
+                        }
+                        ((JShellLineReader) reader).repaint();
+                    });
+                }
+            }
+            return builder.toAttributedString();
+        }
+
+        private AttributedStyle toAttributedStyle(Set<Attribute> attributes) {
+            AttributedStyle result = AttributedStyle.DEFAULT;
+            if (attributes.contains(Attribute.DECLARATION)) {
+                result = result.bold();
+            }
+            if (attributes.contains(Attribute.DEPRECATED)) {
+                result = useComplexDeprecationHighlight ? result.faint().italic()
+                                                        : result.inverse();
+            }
+            if (attributes.contains(Attribute.KEYWORD)) {
+                result = result.underline();
+            }
+            return result;
+        }
+
+        @Override
+        public void setErrorPattern(Pattern errorPattern) {
+        }
+
+        @Override
+        public void setErrorIndex(int errorIndex) {
+        }
+
+        record UIHighlight(int start, int end, String content, AttributedStyle style) {}
+    }
+
+    private class JShellLineReader extends LineReaderImpl {
+
+        public JShellLineReader(Terminal terminal, String appName, Map<String, Object> variables) {
+            super(terminal, appName, variables);
+            //jline can handle the CONT signal on its own, but (currently) requires sun.misc for it
+            try {
+                Signal.handle(new Signal("CONT"), new Handler() {
+                    @Override public void handle(Signal sig) {
+                        try {
+                            handleSignal(jdk.internal.org.jline.terminal.Terminal.Signal.CONT);
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                        }
+                    }
+                });
+            } catch (IllegalArgumentException ignored) {
+                //the CONT signal does not exist on this platform
+            }
+        }
+
+        CompletionState completionState = new CompletionState();
+
+        @Override
+        protected boolean doComplete(CompletionType lst, boolean useMenu, boolean prefix) {
+            return ConsoleIOContext.this.complete(completionState);
+        }
+
+        @Override
+        public Binding readBinding(KeyMap<Binding> keys, KeyMap<Binding> local) {
+            completionState.actionCount++;
+            return super.readBinding(keys, local);
+        }
+
+        @Override
+        protected boolean insertCloseParen() {
+            Object oldIndent = getVariable(INDENTATION);
+            try {
+                setVariable(INDENTATION, 0);
+                return super.insertCloseParen();
+            } finally {
+                setVariable(INDENTATION, oldIndent);
+            }
+        }
+
+        @Override
+        protected boolean insertCloseSquare() {
+            Object oldIndent = getVariable(INDENTATION);
+            try {
+                setVariable(INDENTATION, 0);
+                return super.insertCloseSquare();
+            } finally {
+                setVariable(INDENTATION, oldIndent);
+            }
+        }
+
+        void repaint() {
+            try {
+                lock.lock();
+                if (isReading()) {
+                    redisplay();
+                }
+            } finally {
+                lock.unlock();
+            }
+        }
     }
 }
