@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @key stress gc
+ * @key stress randomness
  *
  * @summary converted from VM Testbase gc/gctests/PhantomReference/PhantomReferenceTest.
  * VM Testbase keywords: [gc, stress, stressopt, nonconcurrent, jrockit]
@@ -36,9 +36,10 @@
  *
  * @library /vmTestbase
  *          /test/lib
- * @run driver jdk.test.lib.FileInstaller . .
+ * @build jdk.test.whitebox.WhiteBox
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
  * @run main/othervm
- *      -XX:-UseGCOverheadLimit
+ *      -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *      gc.gctests.PhantomReference.PhantomReferenceTest.PhantomReferenceTest
  */
 
@@ -50,6 +51,8 @@ import java.lang.ref.ReferenceQueue;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Random;
+
+import jdk.test.whitebox.WhiteBox;
 import nsk.share.TestFailure;
 import nsk.share.gc.GC;
 import nsk.share.gc.GCTestBase;
@@ -92,7 +95,7 @@ public class PhantomReferenceTest extends GCTestBase {
             int allocationSize = ((int) (rndGenerator.nextDouble()
                     * multiplier)) + minSize;
             byte[] tmp = new byte[allocationSize];
-            Integer ik = new Integer(tmp.hashCode());
+            Integer ik = Integer.valueOf(tmp.hashCode());
             if (hmHelper.containsKey(ik)) {
                 PhantomHelper ph = (PhantomHelper) hmHelper.get(ik);
                 ph.increaseHashCounter();
@@ -110,7 +113,7 @@ public class PhantomReferenceTest extends GCTestBase {
 
         Stresser stresser = new Stresser(runParams.getStressOptions());
         stresser.start(0);
-        GarbageUtils.eatMemory(stresser);
+        WhiteBox.getWhiteBox().fullGC();
         if (!stresser.continueExecution()) {
             return; //we couldn't be sure that FullGC is triggered
         }
