@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,6 +25,7 @@
  * @bug 8017212
  * @summary Examine methods in File.java that access the file system do the
  *          right permission check when a security manager exists.
+ * @run main/othervm -Djava.security.manager=allow CheckPermission
  * @author Dan Xu
  */
 
@@ -361,13 +362,13 @@ public class CheckPermission {
                 "getFileSystemAttributes");
 
         prepare();
-        File tmpFile = File.createTempFile(CHECK_PERMISSION_TEST, null);
+        File tmpFile = File.createTempFile(CHECK_PERMISSION_TEST, null, new File("."));
         assertOnlyCheckOperation(tmpFile, EnumSet.of(FileOperation.WRITE));
         tmpFile.delete();
         assertCheckOperation(tmpFile, EnumSet.of(FileOperation.DELETE));
 
         prepare();
-        tmpFile = File.createTempFile(CHECK_PERMISSION_TEST, null, null);
+        tmpFile = File.createTempFile(CHECK_PERMISSION_TEST, null, new File("."));
         assertOnlyCheckOperation(tmpFile, EnumSet.of(FileOperation.WRITE));
         tmpFile.delete();
         assertCheckOperation(tmpFile, EnumSet.of(FileOperation.DELETE));
