@@ -1,5 +1,6 @@
 /*
  * Copyright 2010 Google Inc.  All Rights Reserved.
+ * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,11 +24,11 @@
 
 /*
  * @test
- * @bug 6980747
+ * @bug 6980747 8297451
  * @summary Check that Process-related classes have the proper
  *     doPrivileged blocks, and can be initialized with an adversarial
  *     security manager.
- * @run main/othervm SecurityManagerClinit
+ * @run main/othervm -Djava.security.manager=allow SecurityManagerClinit
  * @author Martin Buchholz
  */
 
@@ -35,17 +36,30 @@ import java.io.*;
 import java.security.*;
 
 public class SecurityManagerClinit {
-    private static class Policy extends java.security.Policy {
+    private static class SimplePolicy extends Policy {
+        static final Policy DEFAULT_POLICY = Policy.getPolicy();
+
         private Permissions perms;
 
-        public Policy(Permission... permissions) {
+        public SimplePolicy(Permission... permissions) {
             perms = new Permissions();
             for (Permission permission : permissions)
                 perms.add(permission);
         }
 
         public boolean implies(ProtectionDomain pd, Permission p) {
-            return perms.implies(p);
+            return perms.implies(p) || DEFAULT_POLICY.implies(pd, p);
+        }
+    }
+
+    // Security manager that unconditionally performs Thread Modify Access checks.
+    @SuppressWarnings("removal")
+    private static class TMACSecurityManager extends SecurityManager {
+        static final RuntimePermission MODIFY_THREAD_PERMISSION =
+                new RuntimePermission("modifyThread");
+        @Override
+        public void checkAccess(Thread thread) {
+            checkPermission(MODIFY_THREAD_PERMISSION);
         }
     }
 
@@ -54,13 +68,14 @@ public class SecurityManagerClinit {
             System.getProperty("java.home") +
             File.separator + "bin" + File.separator + "java";
 
-        final Policy policy =
-            new Policy
+        final SimplePolicy policy =
+            new SimplePolicy
             (new FilePermission("<<ALL FILES>>", "execute"),
-             new RuntimePermission("setSecurityManager"));
+             new RuntimePermission("setSecurityManager"),
+             new RuntimePermission("modifyThread"));
         Policy.setPolicy(policy);
 
-        System.setSecurityManager(new SecurityManager());
+        System.setSecurityManager(new TMACSecurityManager());
 
         try {
             String[] cmd = { javaExe, "-version" };
