@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -24,13 +22,13 @@
  */
  /*
  * @test
- * @bug 8196399 8202537
+ * @bug 8196399 8202537 8174269
  * @summary  test Formatter if any ArithmeticException is thrown while
  * formatting a number in the locale which does not use any
  * grouping, but specifies a grouping separator.
  * @library provider
  * @build provider/module-info provider/test.NumberFormatProviderImpl
- * @run main/othervm -Djava.locale.providers=SPI,COMPAT NoGroupingUsed
+ * @run main/othervm -Djava.locale.providers=SPI,CLDR NoGroupingUsed
  */
 
 import java.util.Formatter;
@@ -39,7 +37,7 @@ import java.util.Locale;
 public class NoGroupingUsed {
 
     public static void main(String[] args) {
-        Locale locale = new Locale("xx", "YY");
+        Locale locale = Locale.of("xx", "YY");
         String number = "1234567";
         String formatString = "%,d";
 
