@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,10 +25,9 @@
  * @test
  * @bug 8159855
  * @summary test ToolProvider SPI
- * @run main/othervm ToolProviderTest
+ * @run main/othervm -Djava.security.manager=allow ToolProviderTest
  */
 
-import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
@@ -46,6 +45,10 @@ public class ToolProviderTest {
     void run() throws Exception {
         initServices();
 
+        System.out.println("Validate an NPE is thrown with null arguments");
+
+        testNullArgs();
+
         System.out.println("test without security manager present:");
         test();
 
@@ -60,6 +63,33 @@ public class ToolProviderTest {
         int rc = testProvider.run(System.out, System.err, "hello test");
         if (rc != 0) {
             throw new Exception("unexpected exit code: " + rc);
+        }
+    }
+
+    private void testNullArgs() {
+        ToolProvider testProvider = ToolProvider.findFirst("test").get();
+
+        // out null check
+        expectNullPointerException(() -> testProvider.run(null, System.err));
+
+        // err null check
+        expectNullPointerException(() -> testProvider.run(System.out, null));
+
+        // args array null check
+        expectNullPointerException(() ->
+                testProvider.run(System.out, System.err, (String[]) null));
+
+        // args array elements null check
+        expectNullPointerException(() ->
+                testProvider.run(System.out, System.err, (String) null));
+    }
+
+    private static void expectNullPointerException(Runnable test) {
+        try {
+            test.run();
+            throw new Error("NullPointerException not thrown");
+        } catch (NullPointerException e) {
+            // expected
         }
     }
 
@@ -92,7 +122,7 @@ public class ToolProviderTest {
                 // system property
                 System.getProperty("java.home");
                 if (haveSecurityManager) {
-                    throw new Error("exception exception not thrown");
+                    throw new Error("exception not thrown");
                 }
             } catch (SecurityException e) {
                 if (!haveSecurityManager) {
