@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -104,7 +102,7 @@ public class TestExceptionEvents {
                 RecordedStackTrace rs = e.getStackTrace();
                 RecordedClass rc = e.getValue("thrownClass");
                 List<RecordedFrame> frames = rs.getFrames();
-                RecordedFrame topFrame = frames.get(0);
+                RecordedFrame topFrame = frames.getFirst();
                 System.out.println(rc.getName() + " Top frame: " + topFrame.getMethod().getName());
                 if (!topFrame.getMethod().getName().equals("<init>")) {
                     throw new Exception("Expected name of top frame to be <init>");
