@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,29 +21,31 @@
  * questions.
  */
 
-
 // common infrastructure for SunPKCS11 tests
 
-import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.InputStream;
 import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.security.AlgorithmParameters;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchProviderException;
+import java.security.Policy;
 import java.security.Provider;
 import java.security.ProviderException;
+import java.security.SecureRandom;
 import java.security.Security;
 import java.security.spec.ECGenParameterSpec;
 import java.security.spec.ECParameterSpec;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -52,63 +54,78 @@ import java.util.Properties;
 import java.util.ServiceConfigurationError;
 import java.util.ServiceLoader;
 import java.util.Set;
+import java.util.stream.Stream;
 
+import javax.crypto.SecretKey;
+import javax.crypto.spec.SecretKeySpec;
+
+import jdk.test.lib.Platform;
 import jdk.test.lib.artifacts.Artifact;
 import jdk.test.lib.artifacts.ArtifactResolver;
 import jdk.test.lib.artifacts.ArtifactResolverException;
+import jtreg.SkippedException;
 
 public abstract class PKCS11Test {
 
-    private boolean enableSM = false;
-
     static final Properties props = System.getProperties();
-
     static final String PKCS11 = "PKCS11";
-
     // directory of the test source
     static final String BASE = System.getProperty("test.src", ".");
-
+    static final String TEST_CLASSES = System.getProperty("test.classes", ".");
     static final char SEP = File.separatorChar;
-
-    private static final String DEFAULT_POLICY =
-            BASE + SEP + ".." + SEP + "policy";
-
     // directory corresponding to BASE in the /closed hierarchy
     static final String CLOSED_BASE;
+    private static final String DEFAULT_POLICY = BASE + SEP + ".." + SEP + "policy";
+    private static final String PKCS11_REL_PATH = "sun/security/pkcs11";
+    private static final char[] HEX_DIGITS = "0123456789abcdef".toCharArray();
+    private static final SecureRandom srdm = new SecureRandom();
 
-    static {
-        // hack
-        String absBase = new File(BASE).getAbsolutePath();
-        int k = absBase.indexOf(SEP + "test" + SEP + "sun" + SEP);
-        if (k < 0) k = 0;
-        String p1 = absBase.substring(0, k + 6);
-        String p2 = absBase.substring(k + 5);
-        CLOSED_BASE = p1 + "closed" + p2;
+    // Version of the NSS artifact. This coincides with the version of
+    // the NSS version
+    private static final String NSS_BUNDLE_VERSION = "3.101";
+    private static final String NSSLIB = "jpg.tests.jdk.nsslib";
 
-        // set it as a system property to make it available in policy file
-        System.setProperty("closed.base", CLOSED_BASE);
-    }
-
-    // NSS version info
-    public static enum ECCState { None, Basic, Extended };
     static double nss_version = -1;
-    static ECCState nss_ecc_status = ECCState.Extended;
+    static ECCState nss_ecc_status = ECCState.Basic;
 
     // The NSS library we need to search for in getNSSLibDir()
     // Default is "libsoftokn3.so", listed as "softokn3"
     // The other is "libnss3.so", listed as "nss3".
     static String nss_library = "softokn3";
 
-    // NSS versions of each library.  It is simplier to keep nss_version
+    // NSS versions of each library.  It is simpler to keep nss_version
     // for quick checking for generic testing than many if-else statements.
     static double softoken3_version = -1;
     static double nss3_version = -1;
-    static Provider pkcs11;
+    static Provider pkcs11 = newPKCS11Provider();
+    private static String PKCS11_BASE;
+    private static Map<String, String[]> osMap;
 
-    // Goes through ServiceLoader instead of Provider.getInstance() since it
-    // works on all platforms
     static {
-        ServiceLoader sl = ServiceLoader.load(java.security.Provider.class);
+        // hack
+        String absBase = new File(BASE).getAbsolutePath();
+        int k = absBase.indexOf(SEP + "test" + SEP + "jdk" + SEP);
+        if (k < 0) k = 0;
+        String p1 = absBase.substring(0, k);
+        String p2 = absBase.substring(k);
+        CLOSED_BASE = p1 + "/../closed" + p2;
+
+        // set it as a system property to make it available in policy file
+        System.setProperty("closed.base", CLOSED_BASE);
+    }
+
+    static {
+        try {
+            PKCS11_BASE = getBase();
+        } catch (Exception e) {
+            // ignore
+        }
+    }
+
+    private boolean enableSM = false;
+
+    public static Provider newPKCS11Provider() {
+        ServiceLoader<Provider> sl = ServiceLoader.load(java.security.Provider.class);
         Iterator<Provider> iter = sl.iterator();
         Provider p = null;
         boolean found = false;
@@ -126,66 +143,26 @@ public abstract class PKCS11Test {
         // Nothing found through ServiceLoader; fall back to reflection
         if (!found) {
             try {
-                Class clazz = Class.forName("sun.security.pkcs11.SunPKCS11");
-                p = (Provider) clazz.newInstance();
+                Class<?> clazz = Class.forName("sun.security.pkcs11.SunPKCS11");
+                p = (Provider) clazz.getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 ex.printStackTrace();
             }
         }
-        pkcs11 = p;
+        return p;
     }
 
-    /*
-     * Use Solaris SPARC 11.2 or later to avoid an intermittent failure
-     * when running SunPKCS11-Solaris (8044554)
-     */
-    static boolean isBadSolarisSparc(Provider p) {
-        if ("SunPKCS11-Solaris".equals(p.getName()) && badSolarisSparc) {
-            System.out.println("SunPKCS11-Solaris provider requires " +
-                "Solaris SPARC 11.2 or later, skipping");
-            return true;
-        }
-        return false;
-    }
-
-    // Return a SunPKCS11 provider configured with the specified config file
+    // Return the static test SunPKCS11 provider configured with the specified config file
     static Provider getSunPKCS11(String config) throws Exception {
-        if (pkcs11 == null) {
+        return getSunPKCS11(config, pkcs11);
+    }
+
+    // Return the Provider p configured with the specified config file
+    static Provider getSunPKCS11(String config, Provider p) throws Exception {
+        if (p == null) {
             throw new NoSuchProviderException("No PKCS11 provider available");
         }
-        return pkcs11.configure(config);
-    }
-
-    public abstract void main(Provider p) throws Exception;
-
-    protected boolean skipTest(Provider p) {
-        return false;
-    }
-
-    private void premain(Provider p) throws Exception {
-        if (skipTest(p)) {
-            return;
-        }
-
-        // set a security manager and policy before a test case runs,
-        // and disable them after the test case finished
-        try {
-            if (enableSM) {
-                System.setSecurityManager(new SecurityManager());
-            }
-            long start = System.currentTimeMillis();
-            System.out.printf(
-                    "Running test with provider %s (security manager %s) ...%n",
-                        p.getName(), enableSM ? "enabled" : "disabled");
-            main(p);
-            long stop = System.currentTimeMillis();
-            System.out.println("Completed test with provider " + p.getName() +
-                " (" + (stop - start) + " ms).");
-        } finally {
-            if (enableSM) {
-                System.setSecurityManager(null);
-            }
-        }
+        return p.configure(config);
     }
 
     public static void main(PKCS11Test test) throws Exception {
@@ -199,7 +176,7 @@ public abstract class PKCS11Test {
                     test.enableSM = true;
                 } else {
                     throw new RuntimeException("Unknown Command, use 'sm' as "
-                            + "first arguemtn to enable security manager");
+                            + "first argument to enable security manager");
                 }
             }
             if (test.enableSM) {
@@ -212,19 +189,18 @@ public abstract class PKCS11Test {
         Provider[] oldProviders = Security.getProviders();
         try {
             System.out.println("Beginning test run " + test.getClass().getName() + "...");
-            testDefault(test);
             testNSS(test);
-            testDeimos(test);
+
         } finally {
             // NOTE: Do not place a 'return' in any finally block
             // as it will suppress exceptions and hide test failures.
             Provider[] newProviders = Security.getProviders();
             boolean found = true;
-            // Do not restore providers if nothing changed. This is especailly
+            // Do not restore providers if nothing changed. This is especially
             // useful for ./Provider/Login.sh, where a SecurityManager exists.
             if (oldProviders.length == newProviders.length) {
                 found = false;
-                for (int i = 0; i<oldProviders.length; i++) {
+                for (int i = 0; i < oldProviders.length; i++) {
                     if (oldProviders[i] != newProviders[i]) {
                         found = true;
                         break;
@@ -232,53 +208,15 @@ public abstract class PKCS11Test {
                 }
             }
             if (found) {
-                for (Provider p: newProviders) {
+                for (Provider p : newProviders) {
                     Security.removeProvider(p.getName());
                 }
-                for (Provider p: oldProviders) {
+                for (Provider p : oldProviders) {
                     Security.addProvider(p);
                 }
             }
         }
     }
-
-    public static void testDeimos(PKCS11Test test) throws Exception {
-        if (new File("/opt/SUNWconn/lib/libpkcs11.so").isFile() == false ||
-            "true".equals(System.getProperty("NO_DEIMOS"))) {
-            return;
-        }
-        String base = getBase();
-        String p11config = base + SEP + "nss" + SEP + "p11-deimos.txt";
-        Provider p = getSunPKCS11(p11config);
-        test.premain(p);
-    }
-
-    public static void testDefault(PKCS11Test test) throws Exception {
-        // run test for default configured PKCS11 providers (if any)
-
-        if ("true".equals(System.getProperty("NO_DEFAULT"))) {
-            return;
-        }
-
-        Provider[] providers = Security.getProviders();
-        for (int i = 0; i < providers.length; i++) {
-            Provider p = providers[i];
-            if (p.getName().startsWith("SunPKCS11-")) {
-                test.premain(p);
-            }
-        }
-    }
-
-    private static String PKCS11_BASE;
-    static {
-        try {
-            PKCS11_BASE = getBase();
-        } catch (Exception e) {
-            // ignore
-        }
-    }
-
-    private final static String PKCS11_REL_PATH = "sun/security/pkcs11";
 
     public static String getBase() throws Exception {
         if (PKCS11_BASE != null) {
@@ -292,10 +230,20 @@ public abstract class PKCS11Test {
             }
             cwd = cwd.getParentFile();
             if (cwd == null) {
-                throw new Exception("Test root directory not found");
+                throw new RuntimeException("Test root directory not found");
             }
         }
-        PKCS11_BASE = new File(cwd, PKCS11_REL_PATH.replace('/', SEP)).getAbsolutePath();
+        File pkcs11 = new File(cwd, PKCS11_REL_PATH.replace('/', SEP));
+        if (!new File(pkcs11, "nss/p11-nss.txt").exists()) {
+            // this test might be in the closed
+            pkcs11 = new File(new File(cwd, "../../../open/test/jdk"),
+                    PKCS11_REL_PATH.replace('/', SEP));
+            if (!new File(pkcs11, "nss/p11-nss.txt").exists()) {
+                throw new RuntimeException("Not a PKCS11 directory"
+                        + pkcs11.getAbsolutePath());
+            }
+        }
+        PKCS11_BASE = pkcs11.getAbsolutePath();
         return PKCS11_BASE;
     }
 
@@ -304,32 +252,30 @@ public abstract class PKCS11Test {
     }
 
     static String getNSSLibDir(String library) throws Exception {
+        Path libPath = getNSSLibPath(library);
+        if (libPath == null) {
+            return null;
+        }
+
+        String libDir = String.valueOf(libPath.getParent()) + File.separatorChar;
+        System.out.println("nssLibDir: " + libDir);
+        System.setProperty("pkcs11test.nss.libdir", libDir);
+        return libDir;
+    }
+
+    private static Path getNSSLibPath() throws Exception {
+        return getNSSLibPath(nss_library);
+    }
+
+    static Path getNSSLibPath(String library) throws Exception {
         String osid = getOsId();
-        String[] nssLibDirs = getNssLibPaths(osid);
-        if (nssLibDirs == null) {
-            System.out.println("Warning: unsupported OS: " + osid
-                    + ", please initialize NSS librarys location firstly, skipping test");
-            return null;
+        Path libraryName = Path.of(System.mapLibraryName(library));
+        Path nssLibPath = fetchNssLib(osid, libraryName);
+        if (nssLibPath == null) {
+            throw new SkippedException("Warning: unsupported OS: " + osid
+                    + ", please initialize NSS library location, skipping test");
         }
-        if (nssLibDirs.length == 0) {
-            System.out.println("Warning: NSS not supported on this platform, skipping test");
-            return null;
-        }
-        String nssLibDir = null;
-        for (String dir : nssLibDirs) {
-            if (new File(dir).exists() &&
-                new File(dir + System.mapLibraryName(library)).exists()) {
-                nssLibDir = dir;
-                System.out.println("nssLibDir: " + nssLibDir);
-                System.setProperty("pkcs11test.nss.libdir", nssLibDir);
-                break;
-            }
-        }
-        if (nssLibDir == null) {
-            System.out.println("Warning: can't find NSS librarys on this machine, skipping test");
-            return null;
-        }
-        return nssLibDir;
+        return nssLibPath;
     }
 
     private static String getOsId() {
@@ -339,9 +285,8 @@ public abstract class PKCS11Test {
         } else if (osName.equals("Mac OS X")) {
             osName = "MacOSX";
         }
-        String osid = osName + "-" + props.getProperty("os.arch") + "-"
+        return osName + "-" + props.getProperty("os.arch") + "-"
                 + props.getProperty("sun.arch.data.model");
-        return osid;
     }
 
     static boolean isBadNSSVersion(Provider p) {
@@ -354,7 +299,7 @@ public abstract class PKCS11Test {
         return false;
     }
 
-    protected static void safeReload(String lib) throws Exception {
+    protected static void safeReload(String lib) {
         try {
             System.load(lib);
         } catch (UnsatisfiedLinkError e) {
@@ -364,19 +309,20 @@ public abstract class PKCS11Test {
         }
     }
 
-    static boolean loadNSPR(String libdir) throws Exception {
+    static boolean loadNSPR(String libdir) {
         // load NSS softoken dependencies in advance to avoid resolver issues
-        safeReload(libdir + System.mapLibraryName("nspr4"));
-        safeReload(libdir + System.mapLibraryName("plc4"));
-        safeReload(libdir + System.mapLibraryName("plds4"));
-        safeReload(libdir + System.mapLibraryName("sqlite3"));
-        safeReload(libdir + System.mapLibraryName("nssutil3"));
+        String dir = libdir.endsWith(File.separator) ? libdir : libdir + File.separator;
+        safeReload(dir + System.mapLibraryName("nspr4"));
+        safeReload(dir + System.mapLibraryName("plc4"));
+        safeReload(dir + System.mapLibraryName("plds4"));
+        safeReload(dir + System.mapLibraryName("sqlite3"));
+        safeReload(dir + System.mapLibraryName("nssutil3"));
         return true;
     }
 
     // Check the provider being used is NSS
     public static boolean isNSS(Provider p) {
-        return p.getName().toUpperCase().equals("SUNPKCS11-NSS");
+        return p.getName().equalsIgnoreCase("SUNPKCS11-NSS");
     }
 
     static double getNSSVersion() {
@@ -420,7 +366,7 @@ public abstract class PKCS11Test {
         boolean found = false;
         String s = null;
         int i = 0;
-        String libfile = "";
+        Path libfile = null;
 
         if (library.compareTo("softokn3") == 0 && softoken3_version > -1)
             return softoken3_version;
@@ -428,12 +374,11 @@ public abstract class PKCS11Test {
             return nss3_version;
 
         try {
-            String libdir = getNSSLibDir();
-            if (libdir == null) {
+            libfile = getNSSLibPath();
+            if (libfile == null) {
                 return 0.0;
             }
-            libfile = libdir + System.mapLibraryName(library);
-            try (FileInputStream is = new FileInputStream(libfile)) {
+            try (InputStream is = Files.newInputStream(libfile)) {
                 byte[] data = new byte[1000];
                 int read = 0;
 
@@ -473,25 +418,25 @@ public abstract class PKCS11Test {
 
         // the index after whitespace after nssHeader
         int afterheader = s.indexOf("NSS", i) + 4;
-        String version = String.valueOf(s.charAt(afterheader));
+        StringBuilder version = new StringBuilder(String.valueOf(s.charAt(afterheader)));
         for (char c = s.charAt(++afterheader);
-                c == '.' || (c >= '0' && c <= '9');
-                c = s.charAt(++afterheader)) {
-            version += c;
+             c == '.' || (c >= '0' && c <= '9');
+             c = s.charAt(++afterheader)) {
+            version.append(c);
         }
 
         // If a "dot dot" release, strip the extra dots for double parsing
-        String[] dot = version.split("\\.");
+        String[] dot = version.toString().split("\\.");
         if (dot.length > 2) {
-            version = dot[0]+"."+dot[1];
+            version = new StringBuilder(dot[0] + "." + dot[1]);
             for (int j = 2; dot.length > j; j++) {
-                version += dot[j];
+                version.append(dot[j]);
             }
         }
 
         // Convert to double for easier version value checking
         try {
-            nss_version = Double.parseDouble(version);
+            nss_version = Double.parseDouble(version.toString());
         } catch (NumberFormatException e) {
             System.out.println("===== Content start =====");
             System.out.println(s);
@@ -501,7 +446,7 @@ public abstract class PKCS11Test {
             e.printStackTrace();
         }
 
-        System.out.print("lib" + library + " version = "+version+".  ");
+        System.out.print("library: " + library + ", version: " + version + ".  ");
 
         // Check for ECC
         if (s.indexOf("Basic") > 0) {
@@ -528,36 +473,47 @@ public abstract class PKCS11Test {
         nss_library = "nss3";
     }
 
+    // Run NSS testing on a Provider p configured with test nss config
     public static void testNSS(PKCS11Test test) throws Exception {
+        System.out.println("===> testNSS: Starting test run");
+        String nssConfig = getNssConfig();
+        if (nssConfig == null) {
+            throw new SkippedException("testNSS: Problem loading NSS libraries");
+        }
+
+        Provider p = getSunPKCS11(nssConfig);
+        test.premain(p);
+        System.out.println("testNSS: Completed");
+    }
+
+    public static String getNssConfig() throws Exception {
         String libdir = getNSSLibDir();
         if (libdir == null) {
-            return;
+            return null;
         }
-        String base = getBase();
 
-        if (loadNSPR(libdir) == false) {
-            return;
+        if (!loadNSPR(libdir)) {
+            return null;
         }
+
+        String base = getBase();
 
         String libfile = libdir + System.mapLibraryName(nss_library);
 
         String customDBdir = System.getProperty("CUSTOM_DB_DIR");
         String dbdir = (customDBdir != null) ?
-                                customDBdir :
-                                base + SEP + "nss" + SEP + "db";
+                customDBdir :
+                base + SEP + "nss" + SEP + "db";
         // NSS always wants forward slashes for the config path
         dbdir = dbdir.replace('\\', '/');
 
         String customConfig = System.getProperty("CUSTOM_P11_CONFIG");
         String customConfigName = System.getProperty("CUSTOM_P11_CONFIG_NAME", "p11-nss.txt");
-        String p11config = (customConfig != null) ?
-                                customConfig :
-                                base + SEP + "nss" + SEP + customConfigName;
-
         System.setProperty("pkcs11test.nss.lib", libfile);
         System.setProperty("pkcs11test.nss.db", dbdir);
-        Provider p = getSunPKCS11(p11config);
-        test.premain(p);
+        return (customConfig != null) ?
+                customConfig :
+                base + SEP + "nss" + SEP + customConfigName;
     }
 
     // Generate a vector of supported elliptic curves of a given provider
@@ -574,12 +530,12 @@ public abstract class PKCS11Test {
 
         if (kcProp == null) {
             throw new RuntimeException(
-            "\"AlgorithmParameters.EC SupportedCurves property\" not found");
+                    "\"AlgorithmParameters.EC SupportedCurves property\" not found");
         }
 
         System.out.println("Finding supported curves using list from SunEC\n");
         index = 0;
-        for (;;) {
+        for (; ; ) {
             // Each set of curve names is enclosed with brackets.
             begin = kcProp.indexOf('[', index);
             end = kcProp.indexOf(']', index);
@@ -596,12 +552,12 @@ public abstract class PKCS11Test {
             end = kcProp.indexOf(',', begin);
             if (end == -1) {
                 // Only one name in the set.
-                end = index -1;
+                end = index - 1;
             }
 
             curve = kcProp.substring(begin, end);
             getSupportedECParameterSpec(curve, p)
-                .ifPresent(spec -> results.add(spec));
+                    .ifPresent(spec -> results.add(spec));
         }
 
         if (results.size() == 0) {
@@ -612,9 +568,9 @@ public abstract class PKCS11Test {
     }
 
     static Optional<ECParameterSpec> getSupportedECParameterSpec(String curve,
-            Provider p) throws Exception {
+                                                                 Provider p) throws Exception {
         ECParameterSpec e = getECParameterSpec(p, curve);
-        System.out.print("\t "+ curve + ": ");
+        System.out.print("\t " + curve + ": ");
         try {
             KeyPairGenerator kpg = KeyPairGenerator.getInstance("EC", p);
             kpg.initialize(e);
@@ -636,103 +592,13 @@ public abstract class PKCS11Test {
             throws Exception {
 
         AlgorithmParameters parameters =
-            AlgorithmParameters.getInstance("EC", p);
+                AlgorithmParameters.getInstance("EC", p);
 
         parameters.init(new ECGenParameterSpec(name));
 
         return parameters.getParameterSpec(ECParameterSpec.class);
     }
 
-    // Check support for a curve with a provided Vector of EC support
-    boolean checkSupport(List<ECParameterSpec> supportedEC,
-            ECParameterSpec curve) {
-        for (ECParameterSpec ec: supportedEC) {
-            if (ec.equals(curve)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static Map<String,String[]> osMap;
-
-    // Location of the NSS libraries on each supported platform
-    private static Map<String, String[]> getOsMap() {
-        if (osMap != null) {
-            return osMap;
-        }
-
-        osMap = new HashMap<>();
-        osMap.put("SunOS-sparc-32", new String[] { "/usr/lib/mps/" });
-        osMap.put("SunOS-sparcv9-64", new String[] { "/usr/lib/mps/64/" });
-        osMap.put("SunOS-x86-32", new String[] { "/usr/lib/mps/" });
-        osMap.put("SunOS-amd64-64", new String[] { "/usr/lib/mps/64/" });
-        osMap.put("Linux-i386-32", new String[] {
-                "/usr/lib/i386-linux-gnu/",
-                "/usr/lib32/",
-                "/usr/lib/" });
-        osMap.put("Linux-amd64-64", new String[] {
-                "/usr/lib/x86_64-linux-gnu/",
-                "/usr/lib/x86_64-linux-gnu/nss/",
-                "/usr/lib64/" });
-        osMap.put("Linux-ppc64-64", new String[] { "/usr/lib64/" });
-        osMap.put("Linux-ppc64le-64", new String[] { "/usr/lib64/" });
-        osMap.put("Linux-s390x-64", new String[] { "/usr/lib64/" });
-        osMap.put("Windows-x86-32", new String[] {});
-        osMap.put("Windows-amd64-64", new String[] {});
-        osMap.put("MacOSX-x86_64-64", new String[] {});
-        osMap.put("Linux-arm-32", new String[] {
-                "/usr/lib/arm-linux-gnueabi/nss/",
-                "/usr/lib/arm-linux-gnueabihf/nss/" });
-        osMap.put("Linux-aarch64-64", new String[] {
-                "/usr/lib/aarch64-linux-gnu/",
-                "/usr/lib/aarch64-linux-gnu/nss/" });
-        return osMap;
-    }
-
-    private static String[] getNssLibPaths(String osId) {
-        String[] preferablePaths = getPreferableNssLibPaths(osId);
-        if (preferablePaths.length != 0) {
-            return preferablePaths;
-        } else {
-            return getOsMap().get(osId);
-        }
-    }
-
-    private static String[] getPreferableNssLibPaths(String osId) {
-        List<String> nssLibPaths = new ArrayList<>();
-
-        String customNssLibPaths = System.getProperty("test.nss.lib.paths");
-        if (customNssLibPaths == null) {
-            // If custom local NSS lib path is not provided,
-            // try to download NSS libs from artifactory
-            String path = fetchNssLib(osId);
-            if (path != null) {
-                nssLibPaths.add(path);
-            }
-        } else {
-            String[] paths = customNssLibPaths.split(",");
-            for (String path : paths) {
-                if (!path.endsWith(File.separator)) {
-                    nssLibPaths.add(path + File.separator);
-                } else {
-                    nssLibPaths.add(path);
-                }
-            }
-        }
-
-        return nssLibPaths.toArray(new String[nssLibPaths.size()]);
-    }
-
-    private final static char[] hexDigits = "0123456789abcdef".toCharArray();
-
-    private static final String distro = distro();
-
-    static final boolean badSolarisSparc =
-            System.getProperty("os.name").equals("SunOS") &&
-            System.getProperty("os.arch").equals("sparcv9") &&
-            System.getProperty("os.version").compareTo("5.11") <= 0 &&
-            getDistro().compareTo("11.2") < 0;
 
     public static String toString(byte[] b) {
         if (b == null) {
@@ -744,8 +610,8 @@ public abstract class PKCS11Test {
             if (i != 0) {
                 sb.append(':');
             }
-            sb.append(hexDigits[k >>> 4]);
-            sb.append(hexDigits[k & 0xf]);
+            sb.append(HEX_DIGITS[k >>> 4]);
+            sb.append(HEX_DIGITS[k & 0xf]);
         }
         return sb.toString();
     }
@@ -791,20 +657,11 @@ public abstract class PKCS11Test {
         }
     }
 
-    <T> T[] concat(T[] a, T[] b) {
-        if ((b == null) || (b.length == 0)) {
-            return a;
-        }
-        T[] r = Arrays.copyOf(a, a.length + b.length);
-        System.arraycopy(b, 0, r, a.length, b.length);
-        return r;
-    }
-
     /**
      * Returns supported algorithms of specified type.
      */
     static List<String> getSupportedAlgorithms(String type, String alg,
-            Provider p) {
+                                               Provider p) {
         // prepare a list of supported algorithms
         List<String> algorithms = new ArrayList<>();
         Set<Provider.Service> services = p.getServices();
@@ -817,90 +674,252 @@ public abstract class PKCS11Test {
         return algorithms;
     }
 
-    /**
-     * Get the identifier for the operating system distribution
-     */
-    static String getDistro() {
-        return distro;
+    static SecretKey generateKey(String alg, int keySize) {
+        if (alg.contains("PBE")) {
+            return generateKeyPBE(alg, keySize);
+        } else {
+            return generateKeyNonPBE(alg, keySize);
+        }
     }
 
-    private static String distro() {
-        if (props.getProperty("os.name").equals("SunOS")) {
-            try (BufferedReader in =
-                         new BufferedReader(new InputStreamReader(
-                                 Runtime.getRuntime().exec("uname -v").getInputStream()))) {
+    private static SecretKey generateKeyNonPBE(String alg, int keySize) {
+        byte[] keyVal = new byte[keySize];
+        srdm.nextBytes(keyVal);
+        return new SecretKeySpec(keyVal, alg);
+    }
 
-                return in.readLine();
-            } catch (Exception e) {
-                throw new RuntimeException("Failed to determine distro.", e);
-            }
-        } else {
-            // Not used outside Solaris
-            return null;
+    private static SecretKey generateKeyPBE(String alg, int keySize) {
+        char[] pass = new char[keySize];
+        for (int i = 0; i < pass.length; i++) {
+            pass[i] = (char) ('0' + srdm.nextInt(74));
         }
+        byte[] salt = new byte[srdm.nextInt(8, 16)];
+        srdm.nextBytes(salt);
+        int iterations = srdm.nextInt(1, 1000);
+        return new javax.crypto.interfaces.PBEKey() {
+            @Override
+            public String getAlgorithm() {
+                return "PBE";
+            }
+
+            @Override
+            public String getFormat() {
+                return null;
+            }
+
+            @Override
+            public byte[] getEncoded() {
+                throw new RuntimeException("Should not be called");
+            }
+
+            @Override
+            public char[] getPassword() {
+                return pass;
+            }
+
+            @Override
+            public byte[] getSalt() {
+                return salt;
+            }
+
+            @Override
+            public int getIterationCount() {
+                return iterations;
+            }
+        };
     }
 
     static byte[] generateData(int length) {
         byte data[] = new byte[length];
-        for (int i=0; i<data.length; i++) {
+        for (int i = 0; i < data.length; i++) {
             data[i] = (byte) (i % 256);
         }
         return data;
     }
 
-    private static String fetchNssLib(String osId) {
+    private static Path fetchNssLib(String osId, Path libraryName) {
         switch (osId) {
-        case "Windows-x86-32":
-            return fetchNssLib(WINDOWS_X86.class);
+            case "Windows-amd64-64":
+                return fetchNssLib(WINDOWS_X64.class, libraryName);
 
-        case "Windows-amd64-64":
-            return fetchNssLib(WINDOWS_X64.class);
+            case "MacOSX-x86_64-64":
+                return fetchNssLib(MACOSX_X64.class, libraryName);
 
-        case "MacOSX-x86_64-64":
-            return fetchNssLib(MACOSX_X64.class);
+            case "MacOSX-aarch64-64":
+                return fetchNssLib(MACOSX_AARCH64.class, libraryName);
 
-        default:
-            return null;
+            case "Linux-amd64-64":
+                if (Platform.isOracleLinux7()) {
+                    throw new SkippedException("Skipping Oracle Linux prior to v8");
+                } else {
+                    return fetchNssLib(LINUX_X64.class, libraryName);
+                }
+
+            case "Linux-aarch64-64":
+                if (Platform.isOracleLinux7()) {
+                    throw new SkippedException("Skipping Oracle Linux prior to v8");
+                } else {
+                    return fetchNssLib(LINUX_AARCH64.class, libraryName);
+                }
+            default:
+                return null;
         }
     }
 
-    private static String fetchNssLib(Class<?> clazz) {
-        String path = null;
+    private static Path fetchNssLib(Class<?> clazz, Path libraryName) {
+        Path path = null;
         try {
-            path = ArtifactResolver.resolve(clazz).entrySet().stream()
-                    .findAny().get().getValue() + File.separator + "nsslib"
-                    + File.separator;
-        } catch (ArtifactResolverException e) {
+            Path p = ArtifactResolver.resolve(clazz).entrySet().stream()
+                    .findAny().get().getValue();
+            path = findNSSLibrary(p, libraryName);
+        } catch (ArtifactResolverException | IOException e) {
             Throwable cause = e.getCause();
             if (cause == null) {
                 System.out.println("Cannot resolve artifact, "
                         + "please check if JIB jar is present in classpath.");
             } else {
                 throw new RuntimeException("Fetch artifact failed: " + clazz
-                        + "\nPlease make sure the artifact is available.");
+                        + "\nPlease make sure the artifact is available.", e);
             }
         }
+        Policy.setPolicy(null); // Clear the policy created by JIB if any
         return path;
     }
 
+    private static Path findNSSLibrary(Path path, Path libraryName) throws IOException {
+        try(Stream<Path> files = Files.find(path, 10,
+                (tp, attr) -> tp.getFileName().equals(libraryName))) {
+
+            return files.findAny()
+                        .orElseThrow(() ->
+                            new RuntimeException("NSS library \"" + libraryName + "\" was not found in " + path));
+        }
+    }
+
+    public abstract void main(Provider p) throws Exception;
+
+    protected boolean skipTest(Provider p) {
+        return false;
+    }
+
+    private void premain(Provider p) throws Exception {
+        if (skipTest(p)) {
+            return;
+        }
+
+        // set a security manager and policy before a test case runs,
+        // and disable them after the test case finished
+        try {
+            if (enableSM) {
+                System.setSecurityManager(new SecurityManager());
+            }
+            long start = System.currentTimeMillis();
+            System.out.printf(
+                    "Running test with provider %s (security manager %s) ...%n",
+                    p.getName(), enableSM ? "enabled" : "disabled");
+            main(p);
+            long stop = System.currentTimeMillis();
+            System.out.println("Completed test with provider " + p.getName() +
+                    " (" + (stop - start) + " ms).");
+        } finally {
+            if (enableSM) {
+                System.setSecurityManager(null);
+            }
+        }
+    }
+
+    // Check support for a curve with a provided Vector of EC support
+    boolean checkSupport(List<ECParameterSpec> supportedEC,
+                         ECParameterSpec curve) {
+        for (ECParameterSpec ec : supportedEC) {
+            if (ec.equals(curve)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    <T> T[] concat(T[] a, T[] b) {
+        if ((b == null) || (b.length == 0)) {
+            return a;
+        }
+        T[] r = Arrays.copyOf(a, a.length + b.length);
+        System.arraycopy(b, 0, r, a.length, b.length);
+        return r;
+    }
+
+    protected void setCommonSystemProps() {
+        System.setProperty("java.security.debug", "true");
+        System.setProperty("CUSTOM_DB_DIR", TEST_CLASSES);
+    }
+
+    protected void copyNssCertKeyToClassesDir() throws IOException {
+        Path dbPath = Path.of(BASE).getParent().resolve("nss").resolve("db");
+        copyNssCertKeyToClassesDir(dbPath);
+    }
+
+    protected void copyNssCertKeyToClassesDir(Path dbPath) throws IOException {
+        Path destinationPath = Path.of(TEST_CLASSES);
+        String keyDbFile3 = "key3.db";
+        String keyDbFile4 = "key4.db";
+        String certDbFile8 = "cert8.db";
+        String certDbFile9 = "cert9.db";
+
+        Files.copy(dbPath.resolve(certDbFile8),
+                destinationPath.resolve(certDbFile8),
+                StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(dbPath.resolve(certDbFile9),
+                destinationPath.resolve(certDbFile9),
+                StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(dbPath.resolve(keyDbFile3),
+                destinationPath.resolve(keyDbFile3),
+                StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(dbPath.resolve(keyDbFile4),
+                destinationPath.resolve(keyDbFile4),
+                StandardCopyOption.REPLACE_EXISTING);
+    }
+
+    // NSS version info
+    public static enum ECCState {None, Basic, Extended}
+
     @Artifact(
-            organization = "jpg.tests.jdk.nsslib",
+            organization = NSSLIB,
             name = "nsslib-windows_x64",
-            revision = "3.35",
+            revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class WINDOWS_X64 { }
+    private static class WINDOWS_X64 {
+    }
 
     @Artifact(
-            organization = "jpg.tests.jdk.nsslib",
-            name = "nsslib-windows_x86",
-            revision = "3.35",
-            extension = "zip")
-    private static class WINDOWS_X86 { }
-
-    @Artifact(
-            organization = "jpg.tests.jdk.nsslib",
+            organization = NSSLIB,
             name = "nsslib-macosx_x64",
-            revision = "3.35",
+            revision = NSS_BUNDLE_VERSION,
             extension = "zip")
-    private static class MACOSX_X64 { }
+    private static class MACOSX_X64 {
+    }
+
+    @Artifact(
+            organization = NSSLIB,
+            name = "nsslib-macosx_aarch64",
+            revision = NSS_BUNDLE_VERSION,
+            extension = "zip")
+    private static class MACOSX_AARCH64 {
+    }
+
+    @Artifact(
+            organization = NSSLIB,
+            name = "nsslib-linux_x64",
+            revision = NSS_BUNDLE_VERSION,
+            extension = "zip")
+    private static class LINUX_X64 {
+    }
+
+    @Artifact(
+            organization = NSSLIB,
+            name = "nsslib-linux_aarch64",
+            revision = NSS_BUNDLE_VERSION,
+            extension = "zip"
+    )
+    private static class LINUX_AARCH64{
+    }
 }
