@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,20 +23,27 @@
 
 import java.io.*;
 import java.lang.module.ModuleDescriptor;
+import java.lang.module.ModuleFinder;
 import java.lang.reflect.Method;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
 import java.util.regex.Pattern;
+import java.util.spi.ToolProvider;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import jdk.internal.module.ModuleReferenceImpl;
+import jdk.internal.module.ModuleResolution;
 import jdk.test.lib.util.FileUtils;
-import jdk.testlibrary.JDKToolFinder;
+import jdk.test.lib.JDKToolFinder;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
@@ -46,19 +53,30 @@ import static java.lang.System.out;
 
 /*
  * @test
- * @bug 8167328 8171830 8165640 8174248 8176772 8196748 8191533
- * @library /lib/testlibrary /test/lib
+ * @bug 8167328 8171830 8165640 8174248 8176772 8196748 8191533 8210454
+ * @library /test/lib
  * @modules jdk.compiler
  *          jdk.jartool
+ *          java.base/jdk.internal.module
  * @build jdk.test.lib.Platform
  *        jdk.test.lib.util.FileUtils
- *        jdk.testlibrary.JDKToolFinder
+ *        jdk.test.lib.JDKToolFinder
  * @compile Basic.java
  * @run testng Basic
  * @summary Tests for plain Modular jars & Multi-Release Modular jars
  */
 
 public class Basic {
+
+    private static final ToolProvider JAR_TOOL = ToolProvider.findFirst("jar")
+            .orElseThrow(()
+                    -> new RuntimeException("jar tool not found")
+            );
+    private static final ToolProvider JAVAC_TOOL = ToolProvider.findFirst("javac")
+            .orElseThrow(()
+                    -> new RuntimeException("javac tool not found")
+            );
+
     static final Path TEST_SRC = Paths.get(System.getProperty("test.src", "."));
     static final Path TEST_CLASSES = Paths.get(System.getProperty("test.classes", "."));
     static final Path MODULE_CLASSES = TEST_CLASSES.resolve("build");
@@ -110,7 +128,7 @@ public class Basic {
             moduleName = mn; mainClass = mc; version = v; message = m; hashes = h;
             this.requires = requires != null ? requires : Collections.emptySet();
             this.exports = exports != null ? exports : Collections.emptySet();
-            this.uses = uses != null ? uses : Collections.emptySet();;
+            this.uses = uses != null ? uses : Collections.emptySet();
             this.provides = provides != null ? provides : Collections.emptySet();
             this.packages = Stream.concat(this.exports.stream(), contains.stream())
                                   .collect(Collectors.toSet());
@@ -157,6 +175,8 @@ public class Basic {
                         conceals = stringToSet(line);
                     } else if (line.contains("VM warning:")) {
                         continue;  // ignore server vm warning see#8196748
+                    } else if (line.contains("WARNING: JNI access from module not specified in --enable-native-access:")) {
+                        continue;
                     } else {
                         throw new AssertionError("Unknown value " + line);
                     }
@@ -481,9 +501,9 @@ public class Basic {
             "--file=" + modularJar.toString())
             .assertSuccess()
             .resultChecker(r -> {
-                // Expect "bar jar:file:/.../!module-info.class"
+                // Expect "bar jar:file:/...!/module-info.class"
                 // conceals jdk.test.foo, conceals jdk.test.foo.internal"
-                String uri = "jar:" + modularJar.toUri().toString() + "/!module-info.class";
+                String uri = "jar:" + modularJar.toUri().toString() + "!/module-info.class";
                 assertTrue(r.output.contains("bar " + uri),
                            "Expecting to find \"bar " + uri + "\"",
                            "in output, but did not: [" + r.output + "]");
@@ -835,10 +855,14 @@ public class Basic {
             jar(option,
                 "--file=" + modularJar.toString())
                 .assertSuccess()
-                .resultChecker(r ->
+                .resultChecker(r -> {
                     assertTrue(r.output.contains(FOO.moduleName + "@" + FOO.version),
                                "Expected to find ", FOO.moduleName + "@" + FOO.version,
-                               " in [", r.output, "]")
+                               " in [", r.output, "]");
+                    assertTrue(r.output.contains(modularJar.toUri().toString()),
+                               "Expected to find ", modularJar.toUri().toString(),
+                               " in [", r.output, "]");
+                    }
                 );
 
             jar(option,
@@ -878,6 +902,181 @@ public class Basic {
         }
     }
 
+    /**
+     * Validate that you can update a jar only specifying --module-version
+     * @throws IOException
+     */
+    @Test
+    public void updateFooModuleVersion() throws IOException {
+        Path mp = Paths.get("updateFooModuleVersion");
+        createTestDir(mp);
+        Path modClasses = MODULE_CLASSES.resolve(FOO.moduleName);
+        Path modularJar = mp.resolve(FOO.moduleName + ".jar");
+        String newFooVersion = "87.0";
+
+        jar("--create",
+            "--file=" + modularJar.toString(),
+            "--main-class=" + FOO.mainClass,
+            "--module-version=" + FOO.version,
+            "--no-manifest",
+            "-C", modClasses.toString(), ".")
+            .assertSuccess();
+
+        jarWithStdin(modularJar.toFile(), "--describe-module")
+                .assertSuccess()
+                .resultChecker(r ->
+                        assertTrue(r.output.contains(FOO.moduleName + "@" + FOO.version),
+                                "Expected to find ", FOO.moduleName + "@" + FOO.version,
+                                " in [", r.output, "]")
+                );
+
+        jar("--update",
+            "--file=" + modularJar.toString(),
+            "--module-version=" + newFooVersion)
+            .assertSuccess();
+
+        for (String option : new String[]  {"--describe-module", "-d" }) {
+            jarWithStdin(modularJar.toFile(),
+                         option)
+                         .assertSuccess()
+                         .resultChecker(r ->
+                             assertTrue(r.output.contains(FOO.moduleName + "@" + newFooVersion),
+                                "Expected to find ", FOO.moduleName + "@" + newFooVersion,
+                                " in [", r.output, "]")
+                );
+        }
+    }
+
+    @DataProvider(name = "resolutionWarnings")
+    public Object[][] resolutionWarnings() {
+        return new Object[][] {
+            {"incubating", (Predicate<ModuleResolution>) ModuleResolution::hasIncubatingWarning},
+            {"deprecated", (Predicate<ModuleResolution>) ModuleResolution::hasDeprecatedWarning},
+            {"deprecated-for-removal",
+                (Predicate<ModuleResolution>) ModuleResolution::hasDeprecatedForRemovalWarning}
+        };
+    }
+
+    /**
+     * Validate that you can create a jar only specifying --warn-if-resolved
+     * @throws IOException
+     */
+    @Test(dataProvider = "resolutionWarnings")
+    public void shouldAddWarnIfResolved(String resolutionName,
+                                        Predicate<ModuleResolution> hasWarning) throws IOException {
+        Path mp = Paths.get("moduleWarnIfResolved-" + resolutionName);
+        createTestDir(mp);
+        Path modClasses = MODULE_CLASSES.resolve(FOO.moduleName);
+        Path modularJar = mp.resolve(FOO.moduleName + ".jar");
+
+        jar("--create",
+            "--file=" + modularJar.toString(),
+            "--main-class=" + FOO.mainClass,
+            "--warn-if-resolved=" + resolutionName,
+            "--no-manifest",
+            "-C", modClasses.toString(), ".")
+            .assertSuccess();
+
+        ModuleReferenceImpl moduleReference = ModuleFinder.of(modularJar)
+            .find(FOO.moduleName)
+            .map(ModuleReferenceImpl.class::cast)
+            .orElseThrow();
+        ModuleResolution moduleResolution = moduleReference.moduleResolution();
+
+        assertTrue(hasWarning.test(moduleResolution));
+    }
+
+    /**
+     * Validate that you can create a jar only specifying --do-not-resolve-by-default
+     * @throws IOException
+     */
+    @Test
+    public void shouldAddDoNotResolveByDefault() throws IOException {
+        Path mp = Paths.get("moduleDoNotResolveByDefault");
+        createTestDir(mp);
+        Path modClasses = MODULE_CLASSES.resolve(FOO.moduleName);
+        Path modularJar = mp.resolve(FOO.moduleName + ".jar");
+
+        jar("--create",
+            "--file=" + modularJar.toString(),
+            "--main-class=" + FOO.mainClass,
+            "--do-not-resolve-by-default",
+            "--no-manifest",
+            "-C", modClasses.toString(), ".")
+            .assertSuccess();
+
+        ModuleReferenceImpl moduleReference = ModuleFinder.of(modularJar)
+            .find(FOO.moduleName)
+            .map(ModuleReferenceImpl.class::cast)
+            .orElseThrow();
+        ModuleResolution moduleResolution = moduleReference.moduleResolution();
+
+        assertTrue(moduleResolution.doNotResolveByDefault());
+    }
+
+    /**
+     * Validate that you can create a jar specifying --warn-if-resolved and
+     * --do-not-resolve-by-default
+     * @throws IOException
+     */
+    @Test(dataProvider = "resolutionWarnings")
+    public void shouldAddWarnIfResolvedAndDoNotResolveByDefault(String resolutionName,
+                                        Predicate<ModuleResolution> hasWarning) throws IOException {
+        Path mp = Paths.get("moduleResolutionWarnThenNotResolve-" + resolutionName);
+        createTestDir(mp);
+        Path modClasses = MODULE_CLASSES.resolve(FOO.moduleName);
+        Path modularJar = mp.resolve(FOO.moduleName + ".jar");
+
+        jar("--create",
+            "--file=" + modularJar.toString(),
+            "--main-class=" + FOO.mainClass,
+            "--warn-if-resolved=" + resolutionName,
+            "--do-not-resolve-by-default",
+            "--no-manifest",
+            "-C", modClasses.toString(), ".")
+            .assertSuccess();
+
+        ModuleReferenceImpl moduleReference = ModuleFinder.of(modularJar)
+            .find(FOO.moduleName)
+            .map(ModuleReferenceImpl.class::cast)
+            .orElseThrow();
+        ModuleResolution moduleResolution = moduleReference.moduleResolution();
+
+        assertTrue(hasWarning.test(moduleResolution));
+        assertTrue(moduleResolution.doNotResolveByDefault());
+    }
+
+    /**
+     * Validate that you can create a jar specifying --do-not-resolve-by-default and
+     * --warn-if-resolved
+     * @throws IOException
+     */
+    @Test(dataProvider = "resolutionWarnings")
+    public void shouldAddResolutionDoNotResolveByDefaultAndWarnIfResolved(String resolutionName,
+                                        Predicate<ModuleResolution> hasWarning) throws IOException {
+        Path mp = Paths.get("moduleResolutionNotResolveThenWarn-" + resolutionName);
+        createTestDir(mp);
+        Path modClasses = MODULE_CLASSES.resolve(FOO.moduleName);
+        Path modularJar = mp.resolve(FOO.moduleName + ".jar");
+
+        jar("--create",
+            "--file=" + modularJar.toString(),
+            "--main-class=" + FOO.mainClass,
+            "--do-not-resolve-by-default",
+            "--warn-if-resolved=" + resolutionName,
+            "--no-manifest",
+            "-C", modClasses.toString(), ".")
+            .assertSuccess();
+
+        ModuleReferenceImpl moduleReference = ModuleFinder.of(modularJar)
+            .find(FOO.moduleName)
+            .map(ModuleReferenceImpl.class::cast)
+            .orElseThrow();
+        ModuleResolution moduleResolution = moduleReference.moduleResolution();
+
+        assertTrue(hasWarning.test(moduleResolution));
+        assertTrue(moduleResolution.doNotResolveByDefault());
+    }
 
     @DataProvider(name = "autoNames")
     public Object[][] autoNames() {
@@ -933,13 +1132,14 @@ public class Basic {
         }
         Stream.of(args).forEach(commands::add);
         ProcessBuilder p = new ProcessBuilder(commands);
-        if (stdinSource != null)
+        if (stdinSource != null) {
             p.redirectInput(stdinSource);
+        }
         return run(p);
     }
 
     static Result jar(String... args) {
-        return jarWithStdin(null, args);
+        return run(JAR_TOOL, args);
     }
 
     static Path compileModule(String mn) throws IOException {
@@ -1027,13 +1227,8 @@ public class Basic {
     static void javac(Path dest, Path modulePath, Path... sourceFiles)
         throws IOException
     {
-        String javac = getJDKTool("javac");
 
         List<String> commands = new ArrayList<>();
-        commands.add(javac);
-        if (!TOOL_VM_OPTIONS.isEmpty()) {
-            commands.addAll(Arrays.asList(TOOL_VM_OPTIONS.split("\\s+", -1)));
-        }
         commands.add("-d");
         commands.add(dest.toString());
         if (dest.toString().contains("bar")) {
@@ -1048,7 +1243,13 @@ public class Basic {
         }
         Stream.of(sourceFiles).map(Object::toString).forEach(x -> commands.add(x));
 
-        quickFail(run(new ProcessBuilder(commands)));
+        StringWriter sw = new StringWriter();
+        try (PrintWriter pw = new PrintWriter(sw)) {
+            int rc = JAVAC_TOOL.run(pw, pw, commands.toArray(new String[0]));
+            if(rc != 0) {
+                throw new RuntimeException(sw.toString());
+            }
+        }
     }
 
     static Result java(Path modulePath, String entryPoint, String... args) {
@@ -1094,9 +1295,13 @@ public class Basic {
         return false;
     }
 
-    static void quickFail(Result r) {
-        if (r.ec != 0)
-            throw new RuntimeException(r.output);
+    static Result run(ToolProvider tp, String[] commands) {
+        int rc = 0;
+        StringWriter sw = new StringWriter();
+        try (PrintWriter pw = new PrintWriter(sw)) {
+            rc = tp.run(pw, pw, commands);
+        }
+        return new Result(rc, sw.toString());
     }
 
     static Result run(ProcessBuilder pb) {
