@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,14 +25,11 @@
  * @test
  * @bug 8006263
  * @summary Supplementary test cases needed for doclint
- * @modules jdk.compiler/com.sun.tools.doclint
+ * @modules jdk.javadoc/jdk.javadoc.internal.doclint
  *          jdk.compiler/com.sun.tools.javac.api
+ * @run main/othervm -Djava.security.manager=allow RunTest
  */
 
-import com.sun.source.util.JavacTask;
-import com.sun.tools.doclint.DocLint;
-import com.sun.tools.doclint.DocLint.BadArgs;
-import com.sun.tools.javac.api.JavacTool;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
@@ -45,6 +42,12 @@ import java.util.List;
 import java.util.Objects;
 import javax.tools.JavaFileObject;
 import javax.tools.SimpleJavaFileObject;
+
+import com.sun.source.util.JavacTask;
+import com.sun.tools.javac.api.JavacTool;
+
+import jdk.javadoc.internal.doclint.DocLint;
+import jdk.javadoc.internal.doclint.DocLint.BadArgs;
 
 public class RunTest {
     static class SimpleSecurityManager extends SecurityManager {
@@ -185,12 +188,8 @@ public class RunTest {
     }
 
     JavaFileObject createFile(String name, final String body) {
-        return new SimpleJavaFileObject(URI.create(name), JavaFileObject.Kind.SOURCE) {
-            @Override
-            public CharSequence getCharContent(boolean ignoreEncodingErrors) throws IOException {
-                return body;
-            }
-        };
+        return SimpleJavaFileObject.forSource(URI.create(name),
+                                              body);
     }
 
     void error(String msg) {
